Updates for release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+0.6.0
+=====
+- Add main category to exo-open desktop files.
+- Translation updates: Greek, Croatian, Polish, Turkish, Romanian,
+  French, Arabic.
+
 0.5.6
 =====
 - Set application name for Thunar loop detection.
