--- a/po/eu.po
+++ b/po/eu.po
@@ -9,14 +9,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-11-17 17:00+0000\n"
+"POT-Creation-Date: 2011-01-16 16:35+0100\n"
 "PO-Revision-Date: 2010-11-20 23:48+0100\n"
 "Last-Translator: \n"
 "Language-Team: Basque <kde-i18n-doc@kde.org>\n"
+"Language: eu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: eu\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Lokalize 1.0\n"
 
@@ -66,8 +66,11 @@ msgstr "Huts \"%s\" fitxategia irakurtzerakoan: %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:890
 #, c-format
-msgid "Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
-msgstr "Huts \"%s\" irudia kargatzerakoan: Errore ezezaguna ziurrenik hondaturiko irudi fitxategia"
+msgid ""
+"Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
+msgstr ""
+"Huts \"%s\" irudia kargatzerakoan: Errore ezezaguna ziurrenik hondaturiko "
+"irudi fitxategia"
 
 #: ../exo/exo-gtk-extensions.c:227
 #, c-format
@@ -244,7 +247,9 @@ msgstr "Gaitu bilaketa"
 
 #: ../exo/exo-icon-view.c:677
 msgid "View allows user to search through columns interactively"
-msgstr "Ikuspegiak erabiltzaileari zutabetan interaktibori bilatzeko aukera ematen dio"
+msgstr ""
+"Ikuspegiak erabiltzaileari zutabetan interaktibori bilatzeko aukera ematen "
+"dio"
 
 #: ../exo/exo-icon-view.c:694
 msgid "Width for each item"
@@ -276,7 +281,9 @@ msgstr "Markatu zutabea"
 
 #: ../exo/exo-icon-view.c:748
 msgid "Model column used to retrieve the text if using Pango markup"
-msgstr "Pango markatzea erabiltzen bada testua eskuratzeko erabiliko den zutabe modeloa"
+msgstr ""
+"Pango markatzea erabiltzen bada testua eskuratzeko erabiliko den zutabe "
+"modeloa"
 
 #: ../exo/exo-icon-view.c:762
 msgid "Icon View Model"
@@ -287,7 +294,8 @@ msgid "The model for the icon view"
 msgstr "Ikono ikuspegiaren modeloa"
 
 #: ../exo/exo-icon-view.c:777
-msgid "How the text and icon of each item are positioned relative to each other"
+msgid ""
+"How the text and icon of each item are positioned relative to each other"
 msgstr "Elementu bakoitzaren testu eta ikonoaren kokapena bestearekiko"
 
 #: ../exo/exo-icon-view.c:809
@@ -335,8 +343,12 @@ msgid "Single Click Timeout"
 msgstr "Klik bakan denbora muga"
 
 #: ../exo/exo-icon-view.c:889 ../exo/exo-tree-view.c:172
-msgid "The amount of time after which the item under the mouse cursor will be selected automatically in single click mode"
-msgstr "Klik bakaneko moduan kurtsorearen azpiko elementua automatikoki aukeratu pasa behar den denbora"
+msgid ""
+"The amount of time after which the item under the mouse cursor will be "
+"selected automatically in single click mode"
+msgstr ""
+"Klik bakaneko moduan kurtsorearen azpiko elementua automatikoki aukeratu "
+"pasa behar den denbora"
 
 #: ../exo/exo-icon-view.c:904
 msgid "Spacing"
@@ -395,8 +407,12 @@ msgid "_Add a new toolbar"
 msgstr "Tresna-barra berri_a gehitu"
 
 #: ../exo/exo-toolbars-editor.c:221
-msgid "Drag an item onto the toolbars above to add it, from the toolbars in the items table to remove it."
-msgstr "Elementu bat tresna barra mugitu eta bertan gehitu, tresna-barratik kanpora mugitu berau ezabatzeko."
+msgid ""
+"Drag an item onto the toolbars above to add it, from the toolbars in the "
+"items table to remove it."
+msgstr ""
+"Elementu bat tresna barra mugitu eta bertan gehitu, tresna-barratik kanpora "
+"mugitu berau ezabatzeko."
 
 #: ../exo/exo-toolbars-editor.c:538
 msgid "Separator"
@@ -601,44 +617,37 @@ msgstr "Shell Script-ak"
 msgid "Create Launcher <b>%s</b>"
 msgstr "Sortu <b>%s</b> abiarazlea"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:297
 msgid "_Name:"
 msgstr "_Izena:"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:313
 msgid "C_omment:"
 msgstr "Iru_zkina:"
 
-#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:329
 msgid "Comm_and:"
 msgstr "Kom_andoa:"
 
-#. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:344
 msgid "_URL:"
 msgstr "_URL-a:"
 
-#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:360
 msgid "Working _Directory:"
 msgstr "Lan _direktorioa:"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:389
 msgid "_Icon:"
 msgstr "_Ikonoa:"
 
-#. TRANSLATORS: Label for the icon button in "Create Launcher"/"Create Link"
-#. dialog if no icon selected
+#. TRANSLATORS: Label for the icon button in "Create Launcher"/"Create Link" dialog if no icon selected
 #. setup a label to tell that no icon was selected
 #: ../exo-desktop-item-edit/exo-die-editor.c:406
 #: ../exo-desktop-item-edit/exo-die-editor.c:1233
@@ -649,23 +658,25 @@ msgstr "Ikonorik ez"
 msgid "Options:"
 msgstr "Aukerak:"
 
-#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to
-#. avoid mnemonic conflicts
-#. *              and sync your translations with the translations in Thunar
-#. and xfce4-panel.
+#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
+#. *              and sync your translations with the translations in Thunar and xfce4-panel.
 #.
 #: ../exo-desktop-item-edit/exo-die-editor.c:421
 msgid "Use _startup notification"
 msgstr "A_biarazte berri emateak erabili"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:422
-msgid "Select this option to enable startup notification when the command is run from the file manager or the menu. Not every application supports startup notification."
-msgstr "Komandoa fitxategi kudeatzailearen edo menuaren bitartez abiaraztean abiarazte berri ematea gaitu. Abiarazte berri ematea ez dute aplikazio guztiek onartzen."
+msgid ""
+"Select this option to enable startup notification when the command is run "
+"from the file manager or the menu. Not every application supports startup "
+"notification."
+msgstr ""
+"Komandoa fitxategi kudeatzailearen edo menuaren bitartez abiaraztean "
+"abiarazte berri ematea gaitu. Abiarazte berri ematea ez dute aplikazio "
+"guztiek onartzen."
 
-#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to
-#. avoid mnemonic conflicts
-#. *              and sync your translations with the translations in Thunar
-#. and xfce4-panel.
+#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
+#. *              and sync your translations with the translations in Thunar and xfce4-panel.
 #.
 #: ../exo-desktop-item-edit/exo-die-editor.c:434
 msgid "Run in _terminal"
@@ -817,6 +828,7 @@ msgstr "Hobetsiriko aplikazioak"
 msgid "Select default applications for various services"
 msgstr "Zenbait erabilpenerako lehenetsiriko aplikazioak ezarri"
 
+#.
 #. Internet
 #.
 #: ../exo-helper/exo-helper-chooser-dialog.c:132
@@ -849,6 +861,7 @@ msgstr ""
 "Lehenetsiriko posta bezeroa eposta helbide batean\n"
 "klikatzerakoan mezu bat sortzeko erabiliko da."
 
+#.
 #. Utilities
 #.
 #: ../exo-helper/exo-helper-chooser-dialog.c:205
@@ -1027,7 +1040,9 @@ msgstr "Huts %s idazteko idazterakoan"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
-msgstr "Hobetsiriko aplikazioa (web nabigatzailea, eposta bezero eta terminal emuladorea)"
+msgstr ""
+"Hobetsiriko aplikazioa (web nabigatzailea, eposta bezero eta terminal "
+"emuladorea)"
 
 #: ../exo-helper/main.c:41
 msgid "Failed to execute default Web Browser"
@@ -1062,8 +1077,12 @@ msgid "SOCKET ID"
 msgstr "SOCKET IDa"
 
 #: ../exo-helper/main.c:70
-msgid "Launch the default helper of TYPE with the optional PARAMETER, where TYPE is one of the following values."
-msgstr "Abiarazi MOTA laguntzailea aukerako PARAMETRO honez, non MOTA hauetako balio bat izan daitekeen."
+msgid ""
+"Launch the default helper of TYPE with the optional PARAMETER, where TYPE is "
+"one of the following values."
+msgstr ""
+"Abiarazi MOTA laguntzailea aukerako PARAMETRO honez, non MOTA hauetako balio "
+"bat izan daitekeen."
 
 #: ../exo-helper/main.c:70
 msgid "TYPE [PARAMETER]"
@@ -1266,36 +1285,42 @@ msgstr "       exo-open --launch MOTA [PARAMETROAK...]"
 
 #: ../exo-open/main.c:100
 msgid "  -?, --help                          Print this help message and exit"
-msgstr "  -?, --help                          Laguntza testua hau bistarazi eta irten"
+msgstr ""
+"  -?, --help                          Laguntza testua hau bistarazi eta irten"
 
 #: ../exo-open/main.c:101
-msgid "  -V, --version                       Print version information and exit"
-msgstr "  -V, --version                       Bertsio xehetasunak bistarazi eta irten"
+msgid ""
+"  -V, --version                       Print version information and exit"
+msgstr ""
+"  -V, --version                       Bertsio xehetasunak bistarazi eta irten"
 
 #: ../exo-open/main.c:103
 msgid ""
 "  --launch TYPE [PARAMETERs...]       Launch the preferred application of\n"
-"                                      TYPE with the optional PARAMETERs, where\n"
+"                                      TYPE with the optional PARAMETERs, "
+"where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
 "  --launch MOTA [PARAMETROak...]       Abiarazi MOTA motako aplikazio\n"
-"                                       gogokoena PARAMETROak parametroez non\n"
+"                                       gogokoena PARAMETROak parametroez "
+"non\n"
 "                                      MOTA hauetako balio bat izan behar da."
 
 #: ../exo-open/main.c:107
 msgid ""
-"  --working-directory DIRECTORY       Default working directory for applications\n"
+"  --working-directory DIRECTORY       Default working directory for "
+"applications\n"
 "                                      when using the --launch option."
 msgstr ""
-"  --working-directory DIREKTORIOA       Lehenetsiriko lan direktorioa aplikazioentzat\n"
+"  --working-directory DIREKTORIOA       Lehenetsiriko lan direktorioa "
+"aplikazioentzat\n"
 "                                      -launch aukera erabiltzean."
 
 #: ../exo-open/main.c:110
 msgid "The following TYPEs are supported for the --launch command:"
 msgstr "Hurrengo MOTA hauek onartzen dira --launch komandoarentzat:"
 
-#. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader,
-#. TerminalEmulator),
+#. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader, TerminalEmulator),
 #. * since the exo-helper utility will not accept localized TYPEs.
 #.
 #: ../exo-open/main.c:116
@@ -1318,7 +1343,8 @@ msgid ""
 "pass additional parameters to the application (i.e. for TerminalEmulator\n"
 "you can pass the command line that should be run in the terminal)."
 msgstr ""
-"Ez baduzu --launch aukera zehazten, exo-open URL guztiak URL kudeatzaile gogokoenaz\n"
+"Ez baduzu --launch aukera zehazten, exo-open URL guztiak URL kudeatzaile "
+"gogokoenaz\n"
 "irekitzen saiatuko da. Baina --launch komandoa\n"
 "zehaztu ezkero zein gogoko aplikazio abiaraztea\n"
 "aukera dezakezu, eta horri parametro gehigarriak\n"
@@ -1327,8 +1353,12 @@ msgstr ""
 
 #: ../exo-open/main.c:183
 #, c-format
-msgid "Launching desktop files is not supported when %s is compiled without GIO-Unix features."
-msgstr "Idazmahai fitxategi abiarazleak ez dira onartzen %s ez dagoenean GIO_Unix ezaugarriekin konpilaturik."
+msgid ""
+"Launching desktop files is not supported when %s is compiled without GIO-"
+"Unix features."
+msgstr ""
+"Idazmahai fitxategi abiarazleak ez dira onartzen %s ez dagoenean GIO_Unix "
+"ezaugarriekin konpilaturik."
 
 #: ../exo-open/main.c:246
 #, c-format
@@ -1433,11 +1463,19 @@ msgstr "Nabigatu web-a"
 #~ msgid "You are not privileged to mount the volume \"%s\""
 #~ msgstr "Ez duzu \"%s\" bolumena muntatzeko baimenik"
 
-#~ msgid "Blank discs cannot be mounted, use a CD recording application like Xfburn to record audio or data on the disc"
-#~ msgstr "Disko hutsak ezin dira muntatu, Xfburn antzerako CD grabazio aplikazio bat erabili diskoan datuak edo audioa grabatzeko"
+#~ msgid ""
+#~ "Blank discs cannot be mounted, use a CD recording application like Xfburn "
+#~ "to record audio or data on the disc"
+#~ msgstr ""
+#~ "Disko hutsak ezin dira muntatu, Xfburn antzerako CD grabazio aplikazio "
+#~ "bat erabili diskoan datuak edo audioa grabatzeko"
 
-#~ msgid "Audio CDs cannot be mounted, use your favorite audio player to play the audio tracks"
-#~ msgstr "Audio CD-ak ezin dira muntatu, erabili zure erreproduzigailu gustukoena erabili pistak erreproduzitzeko"
+#~ msgid ""
+#~ "Audio CDs cannot be mounted, use your favorite audio player to play the "
+#~ "audio tracks"
+#~ msgstr ""
+#~ "Audio CD-ak ezin dira muntatu, erabili zure erreproduzigailu gustukoena "
+#~ "erabili pistak erreproduzitzeko"
 
 #~ msgid "You are not privileged to teardown the crypto layer"
 #~ msgstr "Ez duzu kriptografia geruza desmuntatzeko baimenik"
@@ -1475,17 +1513,26 @@ msgstr "Nabigatu web-a"
 #~ msgid "Unknown error"
 #~ msgstr "Errore ezezaguna"
 
-#~ msgid "%s is compiled without GIO-Unix features. Therefore it will probably not work on this system."
-#~ msgstr "%s GIO-Unix ezaugarriekin konpilatua izan da. Hau dela eta ziurrenik ez du funtzionatuko sistema honetan."
+#~ msgid ""
+#~ "%s is compiled without GIO-Unix features. Therefore it will probably not "
+#~ "work on this system."
+#~ msgstr ""
+#~ "%s GIO-Unix ezaugarriekin konpilatua izan da. Hau dela eta ziurrenik ez "
+#~ "du funtzionatuko sistema honetan."
 
 #~ msgid "Must specify HAL device UDI or device file"
 #~ msgstr "HAL gailu UDI-a edo gailu fitxategia ezarri behar da"
 
-#~ msgid "Must not specify both a HAL device UDI and a device file simultaneously"
+#~ msgid ""
+#~ "Must not specify both a HAL device UDI and a device file simultaneously"
 #~ msgstr "Ezin dira HAL gailu UDI-a eta gailu fitxategia batera ezarri"
 
-#~ msgid "Cannot mount by HAL device UDI, because HAL support was disabled for this build"
-#~ msgstr "Ezin da HAL gailu UDI-az muntatu HAL onarpena ezgaiturik bait dago eraikitze honetan"
+#~ msgid ""
+#~ "Cannot mount by HAL device UDI, because HAL support was disabled for this "
+#~ "build"
+#~ msgstr ""
+#~ "Ezin da HAL gailu UDI-az muntatu HAL onarpena ezgaiturik bait dago "
+#~ "eraikitze honetan"
 
 #~ msgid "The specified UDI \"%s\" is not a valid HAL device UDI"
 #~ msgstr "Emandako \"%s\" UDI-a ez da baliozko HAL gailu UDI bat"
@@ -1517,14 +1564,22 @@ msgstr "Nabigatu web-a"
 #~ msgid "Unmounting device"
 #~ msgstr "Gailua desmuntatzen"
 
-#~ msgid "The device \"%s\" is being unmounted by the system. Please do not remove the media or disconnect the drive."
-#~ msgstr "\"%s\" gailua sistemak desmuntatua izango da. Mesedez ez gailua deskonektatu edo medioa atera."
+#~ msgid ""
+#~ "The device \"%s\" is being unmounted by the system. Please do not remove "
+#~ "the media or disconnect the drive."
+#~ msgstr ""
+#~ "\"%s\" gailua sistemak desmuntatua izango da. Mesedez ez gailua "
+#~ "deskonektatu edo medioa atera."
 
 #~ msgid "Writing data to device"
 #~ msgstr "Datuak gailuan idazten"
 
-#~ msgid "There is data that needs to be written to the device \"%s\" before it can be removed. Please do not remove the media or disconnect the drive."
-#~ msgstr "Atera haurretik \"%s\" gailuan idatzi behar diren datuak daude. Mesedez ez medioa atera edo gailua deskonektatu."
+#~ msgid ""
+#~ "There is data that needs to be written to the device \"%s\" before it can "
+#~ "be removed. Please do not remove the media or disconnect the drive."
+#~ msgstr ""
+#~ "Atera haurretik \"%s\" gailuan idatzi behar diren datuak daude. Mesedez "
+#~ "ez medioa atera edo gailua deskonektatu."
 
 #~ msgid "Unable to open \"%s\""
 #~ msgstr "Ezin da \"%s\" ireki"
