--- a/po/ro.po
+++ b/po/ro.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-01-13 11:00+0000\n"
+"POT-Creation-Date: 2011-01-16 16:35+0100\n"
 "PO-Revision-Date: 2011-01-16 00:46+0200\n"
 "Last-Translator: Mișu Moldovan <dumol@xfce.org>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
@@ -1302,8 +1302,7 @@ msgstr ""
 "TIP\n"
 "                                      cu parametrii opționali PARAMETRI, "
 "unde\n"
-"                                      TIP are una dintre valorile de mai "
-"jos."
+"                                      TIP are una dintre valorile de mai jos."
 
 #: ../exo-open/main.c:107
 msgid ""
