--- a/po/da.po
+++ b/po/da.po
@@ -2,19 +2,19 @@
 # Copyright (c) 2004-2007 os-cillation.
 # This file is distributed under the same license as the libexo package.
 # Per Kongstad <p_kongstad@op.pl>, 2008, 09.
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: Exo 0.5.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-11-05 17:00+0000\n"
+"POT-Creation-Date: 2011-01-16 16:35+0100\n"
 "PO-Revision-Date: 2010-02-20 00:22+0100\n"
 "Last-Translator: Per Kongstad <p_kongstad@op.pl>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
+"Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: da\n"
 "X-Poedit-Language: Danish\n"
 "X-Poedit-SourceCharset: utf-8\n"
 "X-Poedit-Country: DENMARK\n"
@@ -65,8 +65,11 @@ msgstr "Kunne ikke læse fil \"%s\": %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:890
 #, c-format
-msgid "Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
-msgstr "Kunne ikke indlæse billede \"%s\": Ukendt fejl, højst sandsynligt en ødelagt billedfil"
+msgid ""
+"Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
+msgstr ""
+"Kunne ikke indlæse billede \"%s\": Ukendt fejl, højst sandsynligt en ødelagt "
+"billedfil"
 
 #: ../exo/exo-gtk-extensions.c:227
 #, c-format
@@ -275,7 +278,9 @@ msgstr "Opmærkningskolonne"
 
 #: ../exo/exo-icon-view.c:748
 msgid "Model column used to retrieve the text if using Pango markup"
-msgstr "Modelkolonne som bliver brugt til at hente teksten, hvis der bliver brugt Pango-opmærkning"
+msgstr ""
+"Modelkolonne som bliver brugt til at hente teksten, hvis der bliver brugt "
+"Pango-opmærkning"
 
 #: ../exo/exo-icon-view.c:762
 msgid "Icon View Model"
@@ -286,8 +291,10 @@ msgid "The model for the icon view"
 msgstr "Modellen der bruges til ikonvisning"
 
 #: ../exo/exo-icon-view.c:777
-msgid "How the text and icon of each item are positioned relative to each other"
-msgstr "Hvordan hvert elements tekst og ikoner er placeret i forhold til hinanden"
+msgid ""
+"How the text and icon of each item are positioned relative to each other"
+msgstr ""
+"Hvordan hvert elements tekst og ikoner er placeret i forhold til hinanden"
 
 #: ../exo/exo-icon-view.c:809
 msgid "Reorderable"
@@ -334,8 +341,12 @@ msgid "Single Click Timeout"
 msgstr "Tidsgrænse for enkeltklik"
 
 #: ../exo/exo-icon-view.c:889 ../exo/exo-tree-view.c:172
-msgid "The amount of time after which the item under the mouse cursor will be selected automatically in single click mode"
-msgstr "Hvor lang tid der skal gå, inden elementet under musemarkøren bliver valgt automatisk i enkeltklikstilstand"
+msgid ""
+"The amount of time after which the item under the mouse cursor will be "
+"selected automatically in single click mode"
+msgstr ""
+"Hvor lang tid der skal gå, inden elementet under musemarkøren bliver valgt "
+"automatisk i enkeltklikstilstand"
 
 #: ../exo/exo-icon-view.c:904
 msgid "Spacing"
@@ -394,8 +405,12 @@ msgid "_Add a new toolbar"
 msgstr "_Tilføj ny værktøjsbjælke"
 
 #: ../exo/exo-toolbars-editor.c:221
-msgid "Drag an item onto the toolbars above to add it, from the toolbars in the items table to remove it."
-msgstr "Træk et element til værktøjsbjælken ovenfor for at tilføje det, fra værktøjsbjælkerne i elementtabellen for at fjerne det."
+msgid ""
+"Drag an item onto the toolbars above to add it, from the toolbars in the "
+"items table to remove it."
+msgstr ""
+"Træk et element til værktøjsbjælken ovenfor for at tilføje det, fra "
+"værktøjsbjælkerne i elementtabellen for at fjerne det."
 
 #: ../exo/exo-toolbars-editor.c:538
 msgid "Separator"
@@ -524,7 +539,7 @@ msgid "  --strip-content   Remove node contents from XML files\n"
 msgstr "  --strip-content   Fjern knudeindhold fra XML-filer (node)\n"
 
 #: ../exo-csource/main.c:304 ../exo-desktop-item-edit/main.c:177
-#: ../exo-open/main.c:258
+#: ../exo-open/main.c:471
 #, c-format
 msgid ""
 "Copyright (c) %s\n"
@@ -540,7 +555,7 @@ msgstr ""
 "\n"
 
 #: ../exo-csource/main.c:308 ../exo-desktop-item-edit/main.c:181
-#: ../exo-open/main.c:262
+#: ../exo-open/main.c:475
 #, c-format
 msgid ""
 "%s comes with ABSOLUTELY NO WARRANTY,\n"
@@ -556,7 +571,7 @@ msgstr ""
 "\n"
 
 #: ../exo-csource/main.c:312 ../exo-desktop-item-edit/main.c:185
-#: ../exo-open/main.c:266
+#: ../exo-open/main.c:479
 #, c-format
 msgid "Please report bugs to <%s>.\n"
 msgstr "Send venligst fejl-rapporter til <%s>.\n"
@@ -601,44 +616,37 @@ msgstr "Skalskripter"
 msgid "Create Launcher <b>%s</b>"
 msgstr "Opret programstarter <b>%s</b>"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:297
 msgid "_Name:"
 msgstr "_Navn:"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:313
 msgid "C_omment:"
 msgstr "K_ommentar:"
 
-#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:329
 msgid "Comm_and:"
 msgstr "Komm_ando:"
 
-#. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:344
 msgid "_URL:"
 msgstr "_URL:"
 
-#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:360
 msgid "Working _Directory:"
 msgstr "Arbejds_mappe:"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:389
 msgid "_Icon:"
 msgstr "_Ikon:"
 
-#. TRANSLATORS: Label for the icon button in "Create Launcher"/"Create Link"
-#. dialog if no icon selected
+#. TRANSLATORS: Label for the icon button in "Create Launcher"/"Create Link" dialog if no icon selected
 #. setup a label to tell that no icon was selected
 #: ../exo-desktop-item-edit/exo-die-editor.c:406
 #: ../exo-desktop-item-edit/exo-die-editor.c:1233
@@ -649,24 +657,26 @@ msgstr "Intet ikon"
 msgid "Options:"
 msgstr "Indstillinger:"
 
-#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to
-#. avoid mnemonic conflicts
-#. *              and sync your translations with the translations in Thunar
-#. and xfce4-panel.
-#. 
+#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
+#. *              and sync your translations with the translations in Thunar and xfce4-panel.
+#.
 #: ../exo-desktop-item-edit/exo-die-editor.c:421
 msgid "Use _startup notification"
 msgstr "Brug op_startsbesked"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:422
-msgid "Select this option to enable startup notification when the command is run from the file manager or the menu. Not every application supports startup notification."
-msgstr "Vælg denne indstilling for at slå opstartsbesked til, når kommandoen bliver kørt fra filhåndteringen eller menuen. Ikke alle programmer understøtter dette."
+msgid ""
+"Select this option to enable startup notification when the command is run "
+"from the file manager or the menu. Not every application supports startup "
+"notification."
+msgstr ""
+"Vælg denne indstilling for at slå opstartsbesked til, når kommandoen bliver "
+"kørt fra filhåndteringen eller menuen. Ikke alle programmer understøtter "
+"dette."
 
-#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to
-#. avoid mnemonic conflicts
-#. *              and sync your translations with the translations in Thunar
-#. and xfce4-panel.
-#. 
+#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
+#. *              and sync your translations with the translations in Thunar and xfce4-panel.
+#.
 #: ../exo-desktop-item-edit/exo-die-editor.c:434
 msgid "Run in _terminal"
 msgstr "Kør i _terminal"
@@ -817,8 +827,9 @@ msgstr "Foretrukne programmer"
 msgid "Select default applications for various services"
 msgstr "Vælg foretrukne programmer for forskellige tjenester"
 
+#.
 #. Internet
-#. 
+#.
 #: ../exo-helper/exo-helper-chooser-dialog.c:132
 msgid "Internet"
 msgstr "Internet"
@@ -849,8 +860,9 @@ msgstr ""
 "Det foretrukne postprogram vil blive brugt til at\n"
 "skrive nye e-breve, når du klikker på e-post-adresser."
 
+#.
 #. Utilities
-#. 
+#.
 #: ../exo-helper/exo-helper-chooser-dialog.c:205
 msgid "Utilities"
 msgstr "Værktøjer"
@@ -1020,7 +1032,7 @@ msgstr ""
 msgid "No command specified"
 msgstr "Ingen kommando valgt"
 
-#: ../exo-helper/exo-helper.c:684
+#: ../exo-helper/exo-helper.c:688 ../exo-helper/exo-helper.c:722
 #, c-format
 msgid "Failed to open %s for writing"
 msgstr "Kunne ikke åbne %s i skrivetilstand"
@@ -1062,8 +1074,12 @@ msgid "SOCKET ID"
 msgstr "SOKKEL-ID"
 
 #: ../exo-helper/main.c:70
-msgid "Launch the default helper of TYPE with the optional PARAMETER, where TYPE is one of the following values."
-msgstr "Start standardhjælpen af TYPE med mulige PARAMETRE, hvor TYPE er en af følgende værdier."
+msgid ""
+"Launch the default helper of TYPE with the optional PARAMETER, where TYPE is "
+"one of the following values."
+msgstr ""
+"Start standardhjælpen af TYPE med mulige PARAMETRE, hvor TYPE er en af "
+"følgende værdier."
 
 #: ../exo-helper/main.c:70
 msgid "TYPE [PARAMETER]"
@@ -1256,49 +1272,53 @@ msgstr "W3M Text Browser"
 msgid "X Terminal"
 msgstr "X Terminal"
 
-#: ../exo-open/main.c:84
+#: ../exo-open/main.c:97
 msgid "Usage: exo-open [URLs...]"
 msgstr "Brug: exo-open [URL-er...]"
 
-#: ../exo-open/main.c:85
+#: ../exo-open/main.c:98
 msgid "       exo-open --launch TYPE [PARAMETERs...]"
 msgstr "       exo-open --launch TYPE [PARAMETRE...]"
 
-#: ../exo-open/main.c:87
+#: ../exo-open/main.c:100
 msgid "  -?, --help                          Print this help message and exit"
-msgstr "  -?, --help                          Udskriv denne hjælpbesked og afslut"
+msgstr ""
+"  -?, --help                          Udskriv denne hjælpbesked og afslut"
 
-#: ../exo-open/main.c:88
-msgid "  -V, --version                       Print version information and exit"
-msgstr "  -V, --version                       Udskriv versionsinformation og afslut"
+#: ../exo-open/main.c:101
+msgid ""
+"  -V, --version                       Print version information and exit"
+msgstr ""
+"  -V, --version                       Udskriv versionsinformation og afslut"
 
-#: ../exo-open/main.c:90
+#: ../exo-open/main.c:103
 msgid ""
 "  --launch TYPE [PARAMETERs...]       Launch the preferred application of\n"
-"                                      TYPE with the optional PARAMETERs, where\n"
+"                                      TYPE with the optional PARAMETERs, "
+"where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
 "  --launch TYPE [PARAMETRE...]        Start foretrukne program for\n"
 "                                      TYPE med mulige PARAMETRE, hvor\n"
 "                                      TYPE er en af følgende værdier."
 
-#: ../exo-open/main.c:94
+#: ../exo-open/main.c:107
 msgid ""
-"  --working-directory DIRECTORY       Default working directory for applications\n"
+"  --working-directory DIRECTORY       Default working directory for "
+"applications\n"
 "                                      when using the --launch option."
 msgstr ""
 "  --working-directory DIRECTORY       Standardarbejdsmappe for programmer\n"
 "                                      når tilvalget --launch bruges."
 
-#: ../exo-open/main.c:97
+#: ../exo-open/main.c:110
 msgid "The following TYPEs are supported for the --launch command:"
 msgstr "Følgende TYPEr understøttes af kommandoen --launch:"
 
-#. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader,
-#. TerminalEmulator),
+#. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader, TerminalEmulator),
 #. * since the exo-helper utility will not accept localized TYPEs.
-#. 
-#: ../exo-open/main.c:103
+#.
+#: ../exo-open/main.c:116
 msgid ""
 "  WebBrowser       - The preferred Web Browser.\n"
 "  MailReader       - The preferred Mail Reader.\n"
@@ -1310,7 +1330,7 @@ msgstr ""
 "  FileManager      - Den foretrukne filhåndtering.\n"
 "  TerminalEmulator - Den foretrukne terminal-emulering."
 
-#: ../exo-open/main.c:108
+#: ../exo-open/main.c:121
 msgid ""
 "If you don't specify the --launch option, exo-open will open all specified\n"
 "URLs with their preferred URL handlers. Else, if you specify the --launch\n"
@@ -1319,27 +1339,32 @@ msgid ""
 "you can pass the command line that should be run in the terminal)."
 msgstr ""
 "Hvis du ikke angiver tilvalget --launch, vil exo-open åbne alle angivne\n"
-"URL'er med deres foretrukne URL-håndtering. Ellers, hvis du angiver tilvalget --launch\n"
+"URL'er med deres foretrukne URL-håndtering. Ellers, hvis du angiver "
+"tilvalget --launch\n"
 ", kan du vælge hvilket foretrukket program du ønsker at køre og angive\n"
 "yderligere argumenter til programmet (f.eks. for TerminalEmulator\n"
 "kan du angive kommandolinje som skal køres i terminalen)."
 
-#: ../exo-open/main.c:170
+#: ../exo-open/main.c:183
 #, c-format
-msgid "Launching desktop files is not supported when %s is compiled without GIO-Unix features."
-msgstr "Opstart af skrivebordsfiler er ikke understøttet når %s er bygget uden GIO-Unix-egenskaber."
+msgid ""
+"Launching desktop files is not supported when %s is compiled without GIO-"
+"Unix features."
+msgstr ""
+"Opstart af skrivebordsfiler er ikke understøttet når %s er bygget uden GIO-"
+"Unix-egenskaber."
 
-#: ../exo-open/main.c:312
+#: ../exo-open/main.c:246
 #, c-format
 msgid "Failed to launch preferred application for category \"%s\"."
 msgstr "Kunne ikke køre det foretrukne program for kategorien \"%s\"."
 
-#: ../exo-open/main.c:354
+#: ../exo-open/main.c:552
 #, c-format
 msgid "Unable to detect the URI-scheme of \"%s\"."
 msgstr "Kunne ikke genkende URI-skemaet for \"%s\"."
 
-#: ../exo-open/main.c:364
+#: ../exo-open/main.c:564
 #, c-format
 msgid "Failed to open URI \"%s\"."
 msgstr "Kunne ikke åbne URI'en \"%s\"."
@@ -1432,11 +1457,19 @@ msgstr "Gennemse internettet"
 #~ msgid "You are not privileged to mount the volume \"%s\""
 #~ msgstr "Du har ikke rettigheder til at montere arkivet \"%s\""
 
-#~ msgid "Blank discs cannot be mounted, use a CD recording application like Xfburn to record audio or data on the disc"
-#~ msgstr "Blanke medier kan ikke monteres, brug et cd-brænderprogram som Xfburn til at brænde lyd eller data på mediet"
+#~ msgid ""
+#~ "Blank discs cannot be mounted, use a CD recording application like Xfburn "
+#~ "to record audio or data on the disc"
+#~ msgstr ""
+#~ "Blanke medier kan ikke monteres, brug et cd-brænderprogram som Xfburn til "
+#~ "at brænde lyd eller data på mediet"
 
-#~ msgid "Audio CDs cannot be mounted, use your favorite audio player to play the audio tracks"
-#~ msgstr "Lyd-cd'er kan ikke monteres, brug din favorit lydafspiller til at afspille lydsporene"
+#~ msgid ""
+#~ "Audio CDs cannot be mounted, use your favorite audio player to play the "
+#~ "audio tracks"
+#~ msgstr ""
+#~ "Lyd-cd'er kan ikke monteres, brug din favorit lydafspiller til at "
+#~ "afspille lydsporene"
 
 #~ msgid "You are not privileged to teardown the crypto layer"
 #~ msgstr "Du har ikke rettigheder til at nedrive krypteringslaget"
@@ -1474,17 +1507,26 @@ msgstr "Gennemse internettet"
 #~ msgid "Unknown error"
 #~ msgstr "Ukendt fejl"
 
-#~ msgid "%s is compiled without GIO-Unix features. Therefore it will probably not work on this system."
-#~ msgstr "%s er bygget uden GIO-Unix-egenskaber. Derfor vil det sandsynligvis ikke fungere på dette system."
+#~ msgid ""
+#~ "%s is compiled without GIO-Unix features. Therefore it will probably not "
+#~ "work on this system."
+#~ msgstr ""
+#~ "%s er bygget uden GIO-Unix-egenskaber. Derfor vil det sandsynligvis ikke "
+#~ "fungere på dette system."
 
 #~ msgid "Must specify HAL device UDI or device file"
 #~ msgstr "Der skal angives HAL-enheds UDI eller enhedsfil"
 
-#~ msgid "Must not specify both a HAL device UDI and a device file simultaneously"
+#~ msgid ""
+#~ "Must not specify both a HAL device UDI and a device file simultaneously"
 #~ msgstr "Der må ikke angives både HAL-enheds UDI og enhedsfil på samme tid"
 
-#~ msgid "Cannot mount by HAL device UDI, because HAL support was disabled for this build"
-#~ msgstr "Kan ikke montere med HAL-enheds UDI, da HAL-understøttelse var slået fra, da dette program blev kompileret"
+#~ msgid ""
+#~ "Cannot mount by HAL device UDI, because HAL support was disabled for this "
+#~ "build"
+#~ msgstr ""
+#~ "Kan ikke montere med HAL-enheds UDI, da HAL-understøttelse var slået fra, "
+#~ "da dette program blev kompileret"
 
 #~ msgid "The specified UDI \"%s\" is not a valid HAL device UDI"
 #~ msgstr "Den angivne UDI \"%s\" er ikke en gyldig HAL-enheds UDI"
@@ -1516,14 +1558,22 @@ msgstr "Gennemse internettet"
 #~ msgid "Unmounting device"
 #~ msgstr "Afmonterer enhed"
 
-#~ msgid "The device \"%s\" is being unmounted by the system. Please do not remove the media or disconnect the drive."
-#~ msgstr "Enheden \"%s\" bliver afmonteret af systemet. Fjern venligst ikke mediet eller drevet."
+#~ msgid ""
+#~ "The device \"%s\" is being unmounted by the system. Please do not remove "
+#~ "the media or disconnect the drive."
+#~ msgstr ""
+#~ "Enheden \"%s\" bliver afmonteret af systemet. Fjern venligst ikke mediet "
+#~ "eller drevet."
 
 #~ msgid "Writing data to device"
 #~ msgstr "Skriver data til enhed"
 
-#~ msgid "There is data that needs to be written to the device \"%s\" before it can be removed. Please do not remove the media or disconnect the drive."
-#~ msgstr "Der er data som skal skrives til enheden \"%s\" før den kan fjernes. Fjern venligst ikke mediet eller drevet."
+#~ msgid ""
+#~ "There is data that needs to be written to the device \"%s\" before it can "
+#~ "be removed. Please do not remove the media or disconnect the drive."
+#~ msgstr ""
+#~ "Der er data som skal skrives til enheden \"%s\" før den kan fjernes. "
+#~ "Fjern venligst ikke mediet eller drevet."
 
 #~ msgid "Unable to open \"%s\""
 #~ msgstr "Kan ikke åbne \"%s\""
