--- a/po/hu.po
+++ b/po/hu.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: hu\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-11-27 05:00+0000\n"
+"POT-Creation-Date: 2011-01-16 16:35+0100\n"
 "PO-Revision-Date: 2010-02-05 22:43+0100\n"
 "Last-Translator: Gabor Kelemen <kelemeng at gnome dot hu>\n"
 "Language-Team: Hungarian <gnome at fsf dot hu>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: KBabel 1.11.4\n"
 
@@ -64,8 +64,11 @@ msgstr "A fájl („%s”) olvasása meghiúsult: %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:890
 #, c-format
-msgid "Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
-msgstr "A fájl („%s”) betöltése meghiúsult: az ok ismeretlen, valószínűleg megsérült a fájl"
+msgid ""
+"Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
+msgstr ""
+"A fájl („%s”) betöltése meghiúsult: az ok ismeretlen, valószínűleg megsérült "
+"a fájl"
 
 #: ../exo/exo-gtk-extensions.c:227
 #, c-format
@@ -274,7 +277,9 @@ msgstr "Jelölőkódoszlop"
 
 #: ../exo/exo-icon-view.c:748
 msgid "Model column used to retrieve the text if using Pango markup"
-msgstr "A modellnek a szöveg lekérdezéséhez használt oszlopa Pango jelölőkódok használata esetén"
+msgstr ""
+"A modellnek a szöveg lekérdezéséhez használt oszlopa Pango jelölőkódok "
+"használata esetén"
 
 #: ../exo/exo-icon-view.c:762
 msgid "Icon View Model"
@@ -285,7 +290,8 @@ msgid "The model for the icon view"
 msgstr "Az ikonnézet modellje"
 
 #: ../exo/exo-icon-view.c:777
-msgid "How the text and icon of each item are positioned relative to each other"
+msgid ""
+"How the text and icon of each item are positioned relative to each other"
 msgstr "A szöveg és az ikon hogyan helyezkednek el egymáshoz képest"
 
 #: ../exo/exo-icon-view.c:809
@@ -333,8 +339,12 @@ msgid "Single Click Timeout"
 msgstr "Egyszeres kattintás időkorlátja"
 
 #: ../exo/exo-icon-view.c:889 ../exo/exo-tree-view.c:172
-msgid "The amount of time after which the item under the mouse cursor will be selected automatically in single click mode"
-msgstr "Az egérkurzor alatti elem ennyi idő után automatikusan kijelölésre kerül egyszeres kattintás módban"
+msgid ""
+"The amount of time after which the item under the mouse cursor will be "
+"selected automatically in single click mode"
+msgstr ""
+"Az egérkurzor alatti elem ennyi idő után automatikusan kijelölésre kerül "
+"egyszeres kattintás módban"
 
 #: ../exo/exo-icon-view.c:904
 msgid "Spacing"
@@ -393,8 +403,12 @@ msgid "_Add a new toolbar"
 msgstr "Új _eszköztár hozzáadása"
 
 #: ../exo/exo-toolbars-editor.c:221
-msgid "Drag an item onto the toolbars above to add it, from the toolbars in the items table to remove it."
-msgstr "Húzzon egy elemet a fenti eszköztárakra a felvételéhez, az eszköztárakról az elemtáblába az eltávolításához."
+msgid ""
+"Drag an item onto the toolbars above to add it, from the toolbars in the "
+"items table to remove it."
+msgstr ""
+"Húzzon egy elemet a fenti eszköztárakra a felvételéhez, az eszköztárakról az "
+"elemtáblába az eltávolításához."
 
 #: ../exo/exo-toolbars-editor.c:538
 msgid "Separator"
@@ -599,44 +613,37 @@ msgstr "Shell-parancsfájlok"
 msgid "Create Launcher <b>%s</b>"
 msgstr "<b>%s</b> indítóikon létrehozása"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:297
 msgid "_Name:"
 msgstr "_Név:"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:313
 msgid "C_omment:"
 msgstr "_Megjegyzés:"
 
-#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:329
 msgid "Comm_and:"
 msgstr "_Parancs:"
 
-#. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:344
 msgid "_URL:"
 msgstr "_URL:"
 
-#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:360
 msgid "Working _Directory:"
 msgstr "M_unkakönyvtár:"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:389
 msgid "_Icon:"
 msgstr "_Ikon:"
 
-#. TRANSLATORS: Label for the icon button in "Create Launcher"/"Create Link"
-#. dialog if no icon selected
+#. TRANSLATORS: Label for the icon button in "Create Launcher"/"Create Link" dialog if no icon selected
 #. setup a label to tell that no icon was selected
 #: ../exo-desktop-item-edit/exo-die-editor.c:406
 #: ../exo-desktop-item-edit/exo-die-editor.c:1233
@@ -647,31 +654,34 @@ msgstr "Nincs ikon"
 msgid "Options:"
 msgstr "Beállítások:"
 
-#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to
-#. avoid mnemonic conflicts
-#. *              and sync your translations with the translations in Thunar
-#. and xfce4-panel.
-#. 
+#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
+#. *              and sync your translations with the translations in Thunar and xfce4-panel.
+#.
 #: ../exo-desktop-item-edit/exo-die-editor.c:421
 msgid "Use _startup notification"
 msgstr "In_dítási értesítés használata"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:422
-msgid "Select this option to enable startup notification when the command is run from the file manager or the menu. Not every application supports startup notification."
-msgstr "Válassza ezt a lehetőséget indítási értesítés használatához a parancs fájlkezelőből vagy a menüből való futtatásakor. Nem minden alkalmazás támogatja az indítási értesítést."
+msgid ""
+"Select this option to enable startup notification when the command is run "
+"from the file manager or the menu. Not every application supports startup "
+"notification."
+msgstr ""
+"Válassza ezt a lehetőséget indítási értesítés használatához a parancs "
+"fájlkezelőből vagy a menüből való futtatásakor. Nem minden alkalmazás "
+"támogatja az indítási értesítést."
 
-#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to
-#. avoid mnemonic conflicts
-#. *              and sync your translations with the translations in Thunar
-#. and xfce4-panel.
-#. 
+#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
+#. *              and sync your translations with the translations in Thunar and xfce4-panel.
+#.
 #: ../exo-desktop-item-edit/exo-die-editor.c:434
 msgid "Run in _terminal"
 msgstr "_Terminálban fusson"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:435
 msgid "Select this option to run the command in a terminal window."
-msgstr "Válassza ezt a lehetőséget a parancs terminálablakban való futtatásához."
+msgstr ""
+"Válassza ezt a lehetőséget a parancs terminálablakban való futtatásához."
 
 #. allocate the icon chooser dialog
 #: ../exo-desktop-item-edit/exo-die-editor.c:590
@@ -815,8 +825,9 @@ msgstr "Alapértelmezett alkalmazások"
 msgid "Select default applications for various services"
 msgstr "Alapértelmezett alkalmazások kiválasztása számos szolgáltatáshoz"
 
+#.
 #. Internet
-#. 
+#.
 #: ../exo-helper/exo-helper-chooser-dialog.c:132
 msgid "Internet"
 msgstr "Internet"
@@ -847,8 +858,9 @@ msgstr ""
 "E-mail címekre kattintva az alapértelmezett levelező nyílik meg\n"
 "levelek írásához."
 
+#.
 #. Utilities
-#. 
+#.
 #: ../exo-helper/exo-helper-chooser-dialog.c:205
 msgid "Utilities"
 msgstr "Segédprogramok"
@@ -1060,8 +1072,12 @@ msgid "SOCKET ID"
 msgstr "FOGLALATAZONOSÍTÓ"
 
 #: ../exo-helper/main.c:70
-msgid "Launch the default helper of TYPE with the optional PARAMETER, where TYPE is one of the following values."
-msgstr "Az alapértelmezett segédprogram elindítása a TÍPUSHOZ, az elhagyható PARAMÉTERREL, ahol a TÍPUS a következők egyike."
+msgid ""
+"Launch the default helper of TYPE with the optional PARAMETER, where TYPE is "
+"one of the following values."
+msgstr ""
+"Az alapértelmezett segédprogram elindítása a TÍPUSHOZ, az elhagyható "
+"PARAMÉTERREL, ahol a TÍPUS a következők egyike."
 
 #: ../exo-helper/main.c:70
 msgid "TYPE [PARAMETER]"
@@ -1267,35 +1283,40 @@ msgid "  -?, --help                          Print this help message and exit"
 msgstr "  -?, --help                          Ezen súgó kiírása és kilépés"
 
 #: ../exo-open/main.c:101
-msgid "  -V, --version                       Print version information and exit"
-msgstr "  -V, --version                       Verzióinformációk kiírása és kilépés"
+msgid ""
+"  -V, --version                       Print version information and exit"
+msgstr ""
+"  -V, --version                       Verzióinformációk kiírása és kilépés"
 
 #: ../exo-open/main.c:103
 msgid ""
 "  --launch TYPE [PARAMETERs...]       Launch the preferred application of\n"
-"                                      TYPE with the optional PARAMETERs, where\n"
+"                                      TYPE with the optional PARAMETERs, "
+"where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
 "  --launch TÍPUS [PARAMÉTEREK…]       Az adott TÍPUSÚ alapértelmezett\n"
 "                                      alkalmazás indítása a PARAMÉTEREKKEL,\n"
-"                                      ahol a TÍPUS a következő értékek egyike."
+"                                      ahol a TÍPUS a következő értékek "
+"egyike."
 
 #: ../exo-open/main.c:107
 msgid ""
-"  --working-directory DIRECTORY       Default working directory for applications\n"
+"  --working-directory DIRECTORY       Default working directory for "
+"applications\n"
 "                                      when using the --launch option."
 msgstr ""
-"  --working-directory KÖNYVTÁR      Alkalmazások alapértelmezett munkakönyvtára\n"
+"  --working-directory KÖNYVTÁR      Alkalmazások alapértelmezett "
+"munkakönyvtára\n"
 "                                    a --launch kapcsolóval való indításkor."
 
 #: ../exo-open/main.c:110
 msgid "The following TYPEs are supported for the --launch command:"
 msgstr "A következő TÍPUSOK támogatottak a --launch parancshoz:"
 
-#. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader,
-#. TerminalEmulator),
+#. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader, TerminalEmulator),
 #. * since the exo-helper utility will not accept localized TYPEs.
-#. 
+#.
 #: ../exo-open/main.c:116
 msgid ""
 "  WebBrowser       - The preferred Web Browser.\n"
@@ -1316,16 +1337,22 @@ msgid ""
 "pass additional parameters to the application (i.e. for TerminalEmulator\n"
 "you can pass the command line that should be run in the terminal)."
 msgstr ""
-"Ha nem adja meg a --launch kapcsolót, az exo-open az összes megadott URL címet\n"
+"Ha nem adja meg a --launch kapcsolót, az exo-open az összes megadott URL "
+"címet\n"
 "megnyitja az alapértelmezett URL kezelővel. Egyébként a --launch kapcsoló\n"
-"megadásakor kiválaszthatja a futtatandó alapértelmezett alkalmazást és további\n"
+"megadásakor kiválaszthatja a futtatandó alapértelmezett alkalmazást és "
+"további\n"
 "paramétereket adhat meg az alkalmazásnak (például a TerminalEmulator\n"
 "esetén átadhatja a terminálban futtatandó parancssort)."
 
 #: ../exo-open/main.c:183
 #, c-format
-msgid "Launching desktop files is not supported when %s is compiled without GIO-Unix features."
-msgstr "Az asztali fájlok indítása nem támogatott, ha a(z) %s a GIO-Unix szolgáltatások nélkül van fordítva."
+msgid ""
+"Launching desktop files is not supported when %s is compiled without GIO-"
+"Unix features."
+msgstr ""
+"Az asztali fájlok indítása nem támogatott, ha a(z) %s a GIO-Unix "
+"szolgáltatások nélkül van fordítva."
 
 #: ../exo-open/main.c:246
 #, c-format
@@ -1430,11 +1457,19 @@ msgstr "Webböngészés"
 #~ msgid "You are not privileged to mount the volume \"%s\""
 #~ msgstr "Nincs jogosultsága a kötet („%s”) csatolására"
 
-#~ msgid "Blank discs cannot be mounted, use a CD recording application like Xfburn to record audio or data on the disc"
-#~ msgstr "Az üres lemezek nem csatolhatók, ehelyett egy CD-író alkalmazás (például az Xfburn) használatával adatokat vagy hangot rögzíthet rá"
+#~ msgid ""
+#~ "Blank discs cannot be mounted, use a CD recording application like Xfburn "
+#~ "to record audio or data on the disc"
+#~ msgstr ""
+#~ "Az üres lemezek nem csatolhatók, ehelyett egy CD-író alkalmazás (például "
+#~ "az Xfburn) használatával adatokat vagy hangot rögzíthet rá"
 
-#~ msgid "Audio CDs cannot be mounted, use your favorite audio player to play the audio tracks"
-#~ msgstr "A hang-CD-k nem csatolhatók, a hangsávokat a kedvenc hanglejátszójával játszhatja le"
+#~ msgid ""
+#~ "Audio CDs cannot be mounted, use your favorite audio player to play the "
+#~ "audio tracks"
+#~ msgstr ""
+#~ "A hang-CD-k nem csatolhatók, a hangsávokat a kedvenc hanglejátszójával "
+#~ "játszhatja le"
 
 #~ msgid "You are not privileged to teardown the crypto layer"
 #~ msgstr "Nincs jogosultsága leválasztani a titkosítási réteget"
@@ -1472,17 +1507,26 @@ msgstr "Webböngészés"
 #~ msgid "Unknown error"
 #~ msgstr "Ismeretlen hiba"
 
-#~ msgid "%s is compiled without GIO-Unix features. Therefore it will probably not work on this system."
-#~ msgstr "%s a GIO-Unix szolgáltatások nélkül lett fordítva. Emiatt valószínűleg nem fog működni ezen a rendszeren."
+#~ msgid ""
+#~ "%s is compiled without GIO-Unix features. Therefore it will probably not "
+#~ "work on this system."
+#~ msgstr ""
+#~ "%s a GIO-Unix szolgáltatások nélkül lett fordítva. Emiatt valószínűleg "
+#~ "nem fog működni ezen a rendszeren."
 
 #~ msgid "Must specify HAL device UDI or device file"
 #~ msgstr "Meg kell adnia a HAL eszköz UDI-t vagy az eszközfájlt"
 
-#~ msgid "Must not specify both a HAL device UDI and a device file simultaneously"
+#~ msgid ""
+#~ "Must not specify both a HAL device UDI and a device file simultaneously"
 #~ msgstr "Nem adhat meg egyszerre HAL eszköz UDI-t és eszközfájlt is"
 
-#~ msgid "Cannot mount by HAL device UDI, because HAL support was disabled for this build"
-#~ msgstr "Nem lehet HAL eszköz UDI szerint csatolni, mert a HAL támogatás nem engedélyezett"
+#~ msgid ""
+#~ "Cannot mount by HAL device UDI, because HAL support was disabled for this "
+#~ "build"
+#~ msgstr ""
+#~ "Nem lehet HAL eszköz UDI szerint csatolni, mert a HAL támogatás nem "
+#~ "engedélyezett"
 
 #~ msgid "The specified UDI \"%s\" is not a valid HAL device UDI"
 #~ msgstr "A megadott UDI („%s”) nem érvényes HAL eszköz UDI"
@@ -1514,11 +1558,19 @@ msgstr "Webböngészés"
 #~ msgid "Unmounting device"
 #~ msgstr "Eszköz leválasztása"
 
-#~ msgid "The device \"%s\" is being unmounted by the system. Please do not remove the media or disconnect the drive."
-#~ msgstr "Az eszköz („%s”) leválasztása folyamatban. Ne távolítsa el az adathordozót és ne kapcsolja le a meghajtót."
+#~ msgid ""
+#~ "The device \"%s\" is being unmounted by the system. Please do not remove "
+#~ "the media or disconnect the drive."
+#~ msgstr ""
+#~ "Az eszköz („%s”) leválasztása folyamatban. Ne távolítsa el az "
+#~ "adathordozót és ne kapcsolja le a meghajtót."
 
 #~ msgid "Writing data to device"
 #~ msgstr "Adatok írása az eszközre"
 
-#~ msgid "There is data that needs to be written to the device \"%s\" before it can be removed. Please do not remove the media or disconnect the drive."
-#~ msgstr "Adatokat kell az eszközre („%s”) írni annak eltávolítása előtt. Ne távolítsa el az adathordozót és ne kapcsolja le a meghajtót."
+#~ msgid ""
+#~ "There is data that needs to be written to the device \"%s\" before it can "
+#~ "be removed. Please do not remove the media or disconnect the drive."
+#~ msgstr ""
+#~ "Adatokat kell az eszközre („%s”) írni annak eltávolítása előtt. Ne "
+#~ "távolítsa el az adathordozót és ne kapcsolja le a meghajtót."
