--- a/po/id.po
+++ b/po/id.po
@@ -2,19 +2,19 @@
 # Copyright (C) 2004-2007 os-cillation e.K.
 # This file is distributed under the same license as the libexo package.
 # Andhika Padmawan <andhika.padmawan@gmail.com>, 2010.
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-11-07 05:00+0000\n"
+"POT-Creation-Date: 2011-01-16 16:35+0100\n"
 "PO-Revision-Date: 2010-06-26 09:22-0400\n"
 "Last-Translator: Andhika Padmawan <andhika.padmawan@gmail.com>\n"
 "Language-Team: Indonesian <translation-team-id@lists.sourceforge.net>\n"
+"Language: id\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: id\n"
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:131
 #: ../exo/exo-cell-renderer-icon.c:144
@@ -62,8 +62,11 @@ msgstr "Gagal membaca berkas \"%s\": %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:890
 #, c-format
-msgid "Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
-msgstr "Gagal memuat gambar \"%s\": Alasan tidak diketahui, kemungkinan berkas gambar yang korup"
+msgid ""
+"Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
+msgstr ""
+"Gagal memuat gambar \"%s\": Alasan tidak diketahui, kemungkinan berkas "
+"gambar yang korup"
 
 #: ../exo/exo-gtk-extensions.c:227
 #, c-format
@@ -240,7 +243,8 @@ msgstr "Aktifkan Cari"
 
 #: ../exo/exo-icon-view.c:677
 msgid "View allows user to search through columns interactively"
-msgstr "Tampilan mengizinkan pengguna untuk mencari dalam kolom secara interaktif"
+msgstr ""
+"Tampilan mengizinkan pengguna untuk mencari dalam kolom secara interaktif"
 
 #: ../exo/exo-icon-view.c:694
 msgid "Width for each item"
@@ -272,7 +276,8 @@ msgstr "Kolom markah"
 
 #: ../exo/exo-icon-view.c:748
 msgid "Model column used to retrieve the text if using Pango markup"
-msgstr "Kolom model yang digunakan untuk mengambil teks jika menggunakan markah Pango"
+msgstr ""
+"Kolom model yang digunakan untuk mengambil teks jika menggunakan markah Pango"
 
 #: ../exo/exo-icon-view.c:762
 msgid "Icon View Model"
@@ -283,8 +288,11 @@ msgid "The model for the icon view"
 msgstr "Model untuk tampilan ikon"
 
 #: ../exo/exo-icon-view.c:777
-msgid "How the text and icon of each item are positioned relative to each other"
-msgstr "Cara teks dan ikon untuk setiap item diletakkan secara relatif terhadap satu sama lain"
+msgid ""
+"How the text and icon of each item are positioned relative to each other"
+msgstr ""
+"Cara teks dan ikon untuk setiap item diletakkan secara relatif terhadap satu "
+"sama lain"
 
 #: ../exo/exo-icon-view.c:809
 msgid "Reorderable"
@@ -331,8 +339,12 @@ msgid "Single Click Timeout"
 msgstr "Waktu Klik Tunggal"
 
 #: ../exo/exo-icon-view.c:889 ../exo/exo-tree-view.c:172
-msgid "The amount of time after which the item under the mouse cursor will be selected automatically in single click mode"
-msgstr "Jumlah waktu yang dibutuhkan kursor tetikus untuk secara otomatis memilih item pada mode klik tunggal"
+msgid ""
+"The amount of time after which the item under the mouse cursor will be "
+"selected automatically in single click mode"
+msgstr ""
+"Jumlah waktu yang dibutuhkan kursor tetikus untuk secara otomatis memilih "
+"item pada mode klik tunggal"
 
 #: ../exo/exo-icon-view.c:904
 msgid "Spacing"
@@ -391,8 +403,12 @@ msgid "_Add a new toolbar"
 msgstr "_Tambah batang alat baru"
 
 #: ../exo/exo-toolbars-editor.c:221
-msgid "Drag an item onto the toolbars above to add it, from the toolbars in the items table to remove it."
-msgstr "Tarik item ke batang alat di atas untuk menambahkannya, dari batang alat di tabel item untuk menghapusnya."
+msgid ""
+"Drag an item onto the toolbars above to add it, from the toolbars in the "
+"items table to remove it."
+msgstr ""
+"Tarik item ke batang alat di atas untuk menambahkannya, dari batang alat di "
+"tabel item untuk menghapusnya."
 
 #: ../exo/exo-toolbars-editor.c:538
 msgid "Separator"
@@ -521,7 +537,7 @@ msgid "  --strip-content   Remove node contents from XML files\n"
 msgstr "   --strip-content   Hapus isi node dari berkas XML\n"
 
 #: ../exo-csource/main.c:304 ../exo-desktop-item-edit/main.c:177
-#: ../exo-open/main.c:258
+#: ../exo-open/main.c:471
 #, c-format
 msgid ""
 "Copyright (c) %s\n"
@@ -537,7 +553,7 @@ msgstr ""
 "\n"
 
 #: ../exo-csource/main.c:308 ../exo-desktop-item-edit/main.c:181
-#: ../exo-open/main.c:262
+#: ../exo-open/main.c:475
 #, c-format
 msgid ""
 "%s comes with ABSOLUTELY NO WARRANTY,\n"
@@ -553,7 +569,7 @@ msgstr ""
 "\n"
 
 #: ../exo-csource/main.c:312 ../exo-desktop-item-edit/main.c:185
-#: ../exo-open/main.c:266
+#: ../exo-open/main.c:479
 #, c-format
 msgid "Please report bugs to <%s>.\n"
 msgstr "Silakan laporkan kutu ke <%s>.\n"
@@ -598,44 +614,37 @@ msgstr "Skrip Shell"
 msgid "Create Launcher <b>%s</b>"
 msgstr "Buat Peluncur <b>%s</b>"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:297
 msgid "_Name:"
 msgstr "_Nama:"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:313
 msgid "C_omment:"
 msgstr "K_omentar:"
 
-#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:329
 msgid "Comm_and:"
 msgstr "Perint_ah:"
 
-#. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:344
 msgid "_URL:"
 msgstr "_URL:"
 
-#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:360
 msgid "Working _Directory:"
 msgstr "_Direktori Aktif:"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:389
 msgid "_Icon:"
 msgstr "_Ikon:"
 
-#. TRANSLATORS: Label for the icon button in "Create Launcher"/"Create Link"
-#. dialog if no icon selected
+#. TRANSLATORS: Label for the icon button in "Create Launcher"/"Create Link" dialog if no icon selected
 #. setup a label to tell that no icon was selected
 #: ../exo-desktop-item-edit/exo-die-editor.c:406
 #: ../exo-desktop-item-edit/exo-die-editor.c:1233
@@ -646,24 +655,26 @@ msgstr "Tak ada ikon"
 msgid "Options:"
 msgstr "Opsi:"
 
-#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to
-#. avoid mnemonic conflicts
-#. *              and sync your translations with the translations in Thunar
-#. and xfce4-panel.
-#. 
+#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
+#. *              and sync your translations with the translations in Thunar and xfce4-panel.
+#.
 #: ../exo-desktop-item-edit/exo-die-editor.c:421
 msgid "Use _startup notification"
 msgstr "Gunakan _pemberitahuan hidupkan"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:422
-msgid "Select this option to enable startup notification when the command is run from the file manager or the menu. Not every application supports startup notification."
-msgstr "Pilih opsi ini untuk mengaktifkan pemberitahuan hidupkan ketika perintah dijalankan dari manajer berkas atau menu. Tidak semua aplikasi mendukung pemberitahuan hidupkan."
+msgid ""
+"Select this option to enable startup notification when the command is run "
+"from the file manager or the menu. Not every application supports startup "
+"notification."
+msgstr ""
+"Pilih opsi ini untuk mengaktifkan pemberitahuan hidupkan ketika perintah "
+"dijalankan dari manajer berkas atau menu. Tidak semua aplikasi mendukung "
+"pemberitahuan hidupkan."
 
-#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to
-#. avoid mnemonic conflicts
-#. *              and sync your translations with the translations in Thunar
-#. and xfce4-panel.
-#. 
+#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
+#. *              and sync your translations with the translations in Thunar and xfce4-panel.
+#.
 #: ../exo-desktop-item-edit/exo-die-editor.c:434
 msgid "Run in _terminal"
 msgstr "Jalankan di _terminal"
@@ -814,8 +825,9 @@ msgstr "Aplikasi Kesukaan"
 msgid "Select default applications for various services"
 msgstr "Pilih aplikasi standar untuk berbagai layanan"
 
+#.
 #. Internet
-#. 
+#.
 #: ../exo-helper/exo-helper-chooser-dialog.c:132
 msgid "Internet"
 msgstr "Internet"
@@ -846,8 +858,9 @@ msgstr ""
 "Pembaca Surat terpilih akan digunakan untuk menulis\n"
 "email ketika anda klik alamat email."
 
+#.
 #. Utilities
-#. 
+#.
 #: ../exo-helper/exo-helper-chooser-dialog.c:205
 msgid "Utilities"
 msgstr "Utilitas"
@@ -1018,7 +1031,7 @@ msgstr ""
 msgid "No command specified"
 msgstr "Tidak ada perintah ditentukan"
 
-#: ../exo-helper/exo-helper.c:684
+#: ../exo-helper/exo-helper.c:688 ../exo-helper/exo-helper.c:722
 #, c-format
 msgid "Failed to open %s for writing"
 msgstr "Gagal membuka %s untuk menulis"
@@ -1060,8 +1073,12 @@ msgid "SOCKET ID"
 msgstr "ID SOKET"
 
 #: ../exo-helper/main.c:70
-msgid "Launch the default helper of TYPE with the optional PARAMETER, where TYPE is one of the following values."
-msgstr "Jalankan pembantu standar dari TIPE dengan PARAMETER opsional, TIPE adalah salah satu dari nilai berikut."
+msgid ""
+"Launch the default helper of TYPE with the optional PARAMETER, where TYPE is "
+"one of the following values."
+msgstr ""
+"Jalankan pembantu standar dari TIPE dengan PARAMETER opsional, TIPE adalah "
+"salah satu dari nilai berikut."
 
 #: ../exo-helper/main.c:70
 msgid "TYPE [PARAMETER]"
@@ -1254,49 +1271,55 @@ msgstr "Peramban Teks W3M"
 msgid "X Terminal"
 msgstr "Terminal X"
 
-#: ../exo-open/main.c:84
+#: ../exo-open/main.c:97
 msgid "Usage: exo-open [URLs...]"
 msgstr "Penggunaan: exo-open [URL..]"
 
-#: ../exo-open/main.c:85
+#: ../exo-open/main.c:98
 msgid "       exo-open --launch TYPE [PARAMETERs...]"
 msgstr "       exo-open --launch TIPE [PARAMETER...]"
 
-#: ../exo-open/main.c:87
+#: ../exo-open/main.c:100
 msgid "  -?, --help                          Print this help message and exit"
-msgstr "  -?, --help                          Cetak pesan bantuan ini dan keluar"
+msgstr ""
+"  -?, --help                          Cetak pesan bantuan ini dan keluar"
 
-#: ../exo-open/main.c:88
-msgid "  -V, --version                       Print version information and exit"
+#: ../exo-open/main.c:101
+msgid ""
+"  -V, --version                       Print version information and exit"
 msgstr "  -V, --version                       Cetak informasi versi dan keluar"
 
-#: ../exo-open/main.c:90
+#: ../exo-open/main.c:103
 msgid ""
 "  --launch TYPE [PARAMETERs...]       Launch the preferred application of\n"
-"                                      TYPE with the optional PARAMETERs, where\n"
+"                                      TYPE with the optional PARAMETERs, "
+"where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
 "  --launch TIPE [PARAMETER...]       Jalankan aplikasi kesukaan dari\n"
-"                                       TIPE dengan opsi tambahan PARAMETERs,dimana\n"
-"                                       TIPE merupakan salah satu nilai berikut."
+"                                       TIPE dengan opsi tambahan PARAMETERs,"
+"dimana\n"
+"                                       TIPE merupakan salah satu nilai "
+"berikut."
 
-#: ../exo-open/main.c:94
+#: ../exo-open/main.c:107
 msgid ""
-"  --working-directory DIRECTORY       Default working directory for applications\n"
+"  --working-directory DIRECTORY       Default working directory for "
+"applications\n"
 "                                      when using the --launch option."
 msgstr ""
-"  --working-directory DIREKTORI       Direktori kerja standar untuk aplikasi\n"
+"  --working-directory DIREKTORI       Direktori kerja standar untuk "
+"aplikasi\n"
 "                                       ketika menggunakan opsi --launch."
 
-#: ../exo-open/main.c:97
+#: ../exo-open/main.c:110
 msgid "The following TYPEs are supported for the --launch command:"
 msgstr "TIPE berikut didukung untuk perintah --launch:"
 
-#. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader,
-#. TerminalEmulator),
+#. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader, TerminalEmulator),
 #. * since the exo-helper utility will not accept localized TYPEs.
-#. 
-#: ../exo-open/main.c:103
+#.
+#: ../exo-open/main.c:116
 msgid ""
 "  WebBrowser       - The preferred Web Browser.\n"
 "  MailReader       - The preferred Mail Reader.\n"
@@ -1308,7 +1331,7 @@ msgstr ""
 "  FileManager      - Manajer Berkas kesukaan.\n"
 "  TerminalEmulator - Emulator Terminal kesukaan."
 
-#: ../exo-open/main.c:108
+#: ../exo-open/main.c:121
 msgid ""
 "If you don't specify the --launch option, exo-open will open all specified\n"
 "URLs with their preferred URL handlers. Else, if you specify the --launch\n"
@@ -1319,26 +1342,31 @@ msgstr ""
 "Jika anda tidak menentukan opsi --launch, exo-open akan membuka semua\n"
 "URL yang ditentukan dengan penanganan URL kesukaan mereka. Atau, jika\n"
 "anda menentukan opsi --launch, anda dapat memilih aplikasi kesukaan yang\n"
-"ingin anda jalankan, dan meneruskan parameter tambahan ke aplikasi (misalnya\n"
+"ingin anda jalankan, dan meneruskan parameter tambahan ke aplikasi "
+"(misalnya\n"
 "untuk TerminalEmulator anda dapat meneruskan baris perintah yang seharusnya\n"
 "berjalan di terminal)."
 
-#: ../exo-open/main.c:170
+#: ../exo-open/main.c:183
 #, c-format
-msgid "Launching desktop files is not supported when %s is compiled without GIO-Unix features."
-msgstr "Menjalankan berkas desktop tidak didukung jika %s dikompilasi tanpa fitur GIO-Unix."
+msgid ""
+"Launching desktop files is not supported when %s is compiled without GIO-"
+"Unix features."
+msgstr ""
+"Menjalankan berkas desktop tidak didukung jika %s dikompilasi tanpa fitur "
+"GIO-Unix."
 
-#: ../exo-open/main.c:312
+#: ../exo-open/main.c:246
 #, c-format
 msgid "Failed to launch preferred application for category \"%s\"."
 msgstr "Gagal menjalankan aplikasi kesukaan untuk kategori \"%s\"."
 
-#: ../exo-open/main.c:354
+#: ../exo-open/main.c:552
 #, c-format
 msgid "Unable to detect the URI-scheme of \"%s\"."
 msgstr "Tak dapat mendeteksi skema URI dari \"%s\"."
 
-#: ../exo-open/main.c:364
+#: ../exo-open/main.c:564
 #, c-format
 msgid "Failed to open URI \"%s\"."
 msgstr "Gagal membuka URI \"%s\"."
@@ -1431,11 +1459,19 @@ msgstr "Ramban web"
 #~ msgid "You are not privileged to mount the volume \"%s\""
 #~ msgstr "Anda tidak diizinkan untuk mengaitkan volume \"%s\""
 
-#~ msgid "Blank discs cannot be mounted, use a CD recording application like Xfburn to record audio or data on the disc"
-#~ msgstr "Cakram kosong tak dapat dikaitkan, gunakan aplikasi perekam CD seperti Xfburn untuk merekam audio atau data di cakram"
+#~ msgid ""
+#~ "Blank discs cannot be mounted, use a CD recording application like Xfburn "
+#~ "to record audio or data on the disc"
+#~ msgstr ""
+#~ "Cakram kosong tak dapat dikaitkan, gunakan aplikasi perekam CD seperti "
+#~ "Xfburn untuk merekam audio atau data di cakram"
 
-#~ msgid "Audio CDs cannot be mounted, use your favorite audio player to play the audio tracks"
-#~ msgstr "CD Audio tak dapat dikaitkan, gunakan pemutar audio favorit anda untuk memutar jalur audio"
+#~ msgid ""
+#~ "Audio CDs cannot be mounted, use your favorite audio player to play the "
+#~ "audio tracks"
+#~ msgstr ""
+#~ "CD Audio tak dapat dikaitkan, gunakan pemutar audio favorit anda untuk "
+#~ "memutar jalur audio"
 
 #~ msgid "You are not privileged to teardown the crypto layer"
 #~ msgstr "Anda tidak diizinkan untuk meruntuhkan lapisan kripto"
@@ -1473,17 +1509,26 @@ msgstr "Ramban web"
 #~ msgid "Unknown error"
 #~ msgstr "Galat tidak dikenal"
 
-#~ msgid "%s is compiled without GIO-Unix features. Therefore it will probably not work on this system."
-#~ msgstr "%s dikompilasi tanpa fitur GIO-Unix. Maka kelihatannya tidak akan bekerja di sistem ini."
+#~ msgid ""
+#~ "%s is compiled without GIO-Unix features. Therefore it will probably not "
+#~ "work on this system."
+#~ msgstr ""
+#~ "%s dikompilasi tanpa fitur GIO-Unix. Maka kelihatannya tidak akan bekerja "
+#~ "di sistem ini."
 
 #~ msgid "Must specify HAL device UDI or device file"
 #~ msgstr "Harus menentukan UDI divais HAL atau berkas divais"
 
-#~ msgid "Must not specify both a HAL device UDI and a device file simultaneously"
+#~ msgid ""
+#~ "Must not specify both a HAL device UDI and a device file simultaneously"
 #~ msgstr "Jangan menentukan UDI divais HAL dan berkas divais secara bersamaan"
 
-#~ msgid "Cannot mount by HAL device UDI, because HAL support was disabled for this build"
-#~ msgstr "Tak dapat mengaitkan dengan UDI divais HAL, karena dukungan HAL dinonaktifkan untuk pembangunan ini"
+#~ msgid ""
+#~ "Cannot mount by HAL device UDI, because HAL support was disabled for this "
+#~ "build"
+#~ msgstr ""
+#~ "Tak dapat mengaitkan dengan UDI divais HAL, karena dukungan HAL "
+#~ "dinonaktifkan untuk pembangunan ini"
 
 #~ msgid "The specified UDI \"%s\" is not a valid HAL device UDI"
 #~ msgstr "UDI \"%s\" yang ditentukan bukan UDI divais HAL yang benar"
@@ -1510,19 +1555,28 @@ msgstr "Ramban web"
 #~ msgstr "Keluarkan divais"
 
 #~ msgid "The device \"%s\" is being ejected. This may take some time."
-#~ msgstr "Divais \"%s\" sedang dikeluarkan. Ini mungkin memakan waktu beberapa saat."
+#~ msgstr ""
+#~ "Divais \"%s\" sedang dikeluarkan. Ini mungkin memakan waktu beberapa saat."
 
 #~ msgid "Unmounting device"
 #~ msgstr "Melepas kaitan divais"
 
-#~ msgid "The device \"%s\" is being unmounted by the system. Please do not remove the media or disconnect the drive."
-#~ msgstr "Divais \"%s\" sedang dilepas kaitkan oleh sistem. Tolong jangan mengeluarkan media atau mencabut penggerak."
+#~ msgid ""
+#~ "The device \"%s\" is being unmounted by the system. Please do not remove "
+#~ "the media or disconnect the drive."
+#~ msgstr ""
+#~ "Divais \"%s\" sedang dilepas kaitkan oleh sistem. Tolong jangan "
+#~ "mengeluarkan media atau mencabut penggerak."
 
 #~ msgid "Writing data to device"
 #~ msgstr "Menulis data ke divais"
 
-#~ msgid "There is data that needs to be written to the device \"%s\" before it can be removed. Please do not remove the media or disconnect the drive."
-#~ msgstr "Ada data yang perlu ditulis ke divais \"%s\" sebelum divais dapat dikeluarkan. Tolong jangan mengeluarkan media atau mencabut penggerak."
+#~ msgid ""
+#~ "There is data that needs to be written to the device \"%s\" before it can "
+#~ "be removed. Please do not remove the media or disconnect the drive."
+#~ msgstr ""
+#~ "Ada data yang perlu ditulis ke divais \"%s\" sebelum divais dapat "
+#~ "dikeluarkan. Tolong jangan mengeluarkan media atau mencabut penggerak."
 
 #~ msgid "Unable to open \"%s\""
 #~ msgstr "Tak dapat membuka \"%s\""
