--- a/po/kk.po
+++ b/po/kk.po
@@ -2,19 +2,19 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # Baurzhan Muftakhidinov <baurthefirst@gmail.com>, 2009.
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: trunk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-11-03 23:00+0000\n"
+"POT-Creation-Date: 2011-01-16 16:35+0100\n"
 "PO-Revision-Date: 2010-08-03 09:54+0600\n"
 "Last-Translator: Baurzhan Muftakhidinov <baurthefirst@gmail.com>\n"
 "Language-Team: Kazakh <kk_KZ@googlegroups.com>\n"
+"Language: kk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: kk\n"
 "Plural-Forms: nplurals=1; plural=0\n"
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:131
@@ -63,8 +63,11 @@ msgstr "\"%s\" файлын оқу мүмкін емес: %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:890
 #, c-format
-msgid "Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
-msgstr "\"%s\" суретін жүктеу мүмкін емес: Себебі белгісіз, мүмкін, ол файл зақымдалған"
+msgid ""
+"Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
+msgstr ""
+"\"%s\" суретін жүктеу мүмкін емес: Себебі белгісіз, мүмкін, ол файл "
+"зақымдалған"
 
 #: ../exo/exo-gtk-extensions.c:227
 #, c-format
@@ -241,7 +244,8 @@ msgstr "Іздеуді іске қосу"
 
 #: ../exo/exo-icon-view.c:677
 msgid "View allows user to search through columns interactively"
-msgstr "Көрініс пайдаланушыға бағандардан интерактивті іздеуге мүмкіндік береді"
+msgstr ""
+"Көрініс пайдаланушыға бағандардан интерактивті іздеуге мүмкіндік береді"
 
 #: ../exo/exo-icon-view.c:694
 msgid "Width for each item"
@@ -284,7 +288,8 @@ msgid "The model for the icon view"
 msgstr "Таңбашалар көрініс түрі"
 
 #: ../exo/exo-icon-view.c:777
-msgid "How the text and icon of each item are positioned relative to each other"
+msgid ""
+"How the text and icon of each item are positioned relative to each other"
 msgstr "Мәтін мен таңбаша өзара орналасуын көрсетеді"
 
 #: ../exo/exo-icon-view.c:809
@@ -332,8 +337,12 @@ msgid "Single Click Timeout"
 msgstr "Бірлік шерту уақыты"
 
 #: ../exo/exo-icon-view.c:889 ../exo/exo-tree-view.c:172
-msgid "The amount of time after which the item under the mouse cursor will be selected automatically in single click mode"
-msgstr "Бірлік шерту кезіндегі тышқан курсорының астындағы элементті автобелсендірілу уақыты"
+msgid ""
+"The amount of time after which the item under the mouse cursor will be "
+"selected automatically in single click mode"
+msgstr ""
+"Бірлік шерту кезіндегі тышқан курсорының астындағы элементті "
+"автобелсендірілу уақыты"
 
 #: ../exo/exo-icon-view.c:904
 msgid "Spacing"
@@ -392,8 +401,12 @@ msgid "_Add a new toolbar"
 msgstr "Ж_аңа саймандар панелін қосу"
 
 #: ../exo/exo-toolbars-editor.c:221
-msgid "Drag an item onto the toolbars above to add it, from the toolbars in the items table to remove it."
-msgstr "Элементті қосу үшін оны жоғарыдағы панельге тартып апарыңыз, өшіру үшін кері тартыңыз."
+msgid ""
+"Drag an item onto the toolbars above to add it, from the toolbars in the "
+"items table to remove it."
+msgstr ""
+"Элементті қосу үшін оны жоғарыдағы панельге тартып апарыңыз, өшіру үшін кері "
+"тартыңыз."
 
 #: ../exo/exo-toolbars-editor.c:538
 msgid "Separator"
@@ -522,7 +535,7 @@ msgid "  --strip-content   Remove node contents from XML files\n"
 msgstr "  --strip-content   XML файлдарынан node құрамасын өшіру\n"
 
 #: ../exo-csource/main.c:304 ../exo-desktop-item-edit/main.c:177
-#: ../exo-open/main.c:258
+#: ../exo-open/main.c:471
 #, c-format
 msgid ""
 "Copyright (c) %s\n"
@@ -538,7 +551,7 @@ msgstr ""
 "\n"
 
 #: ../exo-csource/main.c:308 ../exo-desktop-item-edit/main.c:181
-#: ../exo-open/main.c:262
+#: ../exo-open/main.c:475
 #, c-format
 msgid ""
 "%s comes with ABSOLUTELY NO WARRANTY,\n"
@@ -553,7 +566,7 @@ msgstr ""
 "\n"
 
 #: ../exo-csource/main.c:312 ../exo-desktop-item-edit/main.c:185
-#: ../exo-open/main.c:266
+#: ../exo-open/main.c:479
 #, c-format
 msgid "Please report bugs to <%s>.\n"
 msgstr "Ақаулықтар жөнінде хабарлаңыз: <%s>.\n"
@@ -598,44 +611,37 @@ msgstr "Shell скриптері"
 msgid "Create Launcher <b>%s</b>"
 msgstr "<b>%s</b> жөнелткішін жасау"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:297
 msgid "_Name:"
 msgstr "_Аты:"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:313
 msgid "C_omment:"
 msgstr "А_нықтамасы:"
 
-#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:329
 msgid "Comm_and:"
 msgstr "Ко_манда:"
 
-#. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:344
 msgid "_URL:"
 msgstr "_URL:"
 
-#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:360
 msgid "Working _Directory:"
 msgstr "Жұмыс _бумасы:"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:389
 msgid "_Icon:"
 msgstr "Таңба_ша:"
 
-#. TRANSLATORS: Label for the icon button in "Create Launcher"/"Create Link"
-#. dialog if no icon selected
+#. TRANSLATORS: Label for the icon button in "Create Launcher"/"Create Link" dialog if no icon selected
 #. setup a label to tell that no icon was selected
 #: ../exo-desktop-item-edit/exo-die-editor.c:406
 #: ../exo-desktop-item-edit/exo-die-editor.c:1233
@@ -646,24 +652,26 @@ msgstr "Таңбашасы жоқ"
 msgid "Options:"
 msgstr "Опциялар:"
 
-#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to
-#. avoid mnemonic conflicts
-#. *              and sync your translations with the translations in Thunar
-#. and xfce4-panel.
-#. 
+#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
+#. *              and sync your translations with the translations in Thunar and xfce4-panel.
+#.
 #: ../exo-desktop-item-edit/exo-die-editor.c:421
 msgid "Use _startup notification"
 msgstr "Қос_ылу хабарламасын қолдану"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:422
-msgid "Select this option to enable startup notification when the command is run from the file manager or the menu. Not every application supports startup notification."
-msgstr "Бұл опцияны тандасаңыз, команда файлдар басқарушы не мәзірден орындалған кезде хабарлама көрсетіледі. Қосылу хабарламасын әрбір қолданба қолдай бермейді."
+msgid ""
+"Select this option to enable startup notification when the command is run "
+"from the file manager or the menu. Not every application supports startup "
+"notification."
+msgstr ""
+"Бұл опцияны тандасаңыз, команда файлдар басқарушы не мәзірден орындалған "
+"кезде хабарлама көрсетіледі. Қосылу хабарламасын әрбір қолданба қолдай "
+"бермейді."
 
-#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to
-#. avoid mnemonic conflicts
-#. *              and sync your translations with the translations in Thunar
-#. and xfce4-panel.
-#. 
+#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
+#. *              and sync your translations with the translations in Thunar and xfce4-panel.
+#.
 #: ../exo-desktop-item-edit/exo-die-editor.c:434
 msgid "Run in _terminal"
 msgstr "Т_ерминалда орындау"
@@ -814,8 +822,9 @@ msgstr "Таңдамалы қолданбалар"
 msgid "Select default applications for various services"
 msgstr "Кейбір қызметтер үшін негізгі қолданбаларды таңдаңыз"
 
+#.
 #. Internet
-#. 
+#.
 #: ../exo-helper/exo-helper-chooser-dialog.c:132
 msgid "Internet"
 msgstr "Интернет"
@@ -846,8 +855,9 @@ msgstr ""
 "Эл. пошта адреске шерткен кезде поштаны жазуға арналған\n"
 "таңдамалы пошта қолданбасы."
 
+#.
 #. Utilities
-#. 
+#.
 #: ../exo-helper/exo-helper-chooser-dialog.c:205
 msgid "Utilities"
 msgstr "Утилиталар"
@@ -1017,14 +1027,15 @@ msgstr ""
 msgid "No command specified"
 msgstr "Команда көрсетілмеген"
 
-#: ../exo-helper/exo-helper.c:684
+#: ../exo-helper/exo-helper.c:688 ../exo-helper/exo-helper.c:722
 #, c-format
 msgid "Failed to open %s for writing"
 msgstr "Жазу үшін %s ашу сәтсіз аяқталды"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
-msgstr "Таңдамалы қолданбалар (веб браузер, пошта қолданбасы мен терминал эмуляторы)"
+msgstr ""
+"Таңдамалы қолданбалар (веб браузер, пошта қолданбасы мен терминал эмуляторы)"
 
 #: ../exo-helper/main.c:41
 msgid "Failed to execute default Web Browser"
@@ -1059,8 +1070,12 @@ msgid "SOCKET ID"
 msgstr "SOCKET ID"
 
 #: ../exo-helper/main.c:70
-msgid "Launch the default helper of TYPE with the optional PARAMETER, where TYPE is one of the following values."
-msgstr "ТҮР үшін негізгі көмекшіні жөнелту, міндетті емес ПАРАМЕТРмен, бұл жердегі ТҮР - төмендегі мәндердің біреуі."
+msgid ""
+"Launch the default helper of TYPE with the optional PARAMETER, where TYPE is "
+"one of the following values."
+msgstr ""
+"ТҮР үшін негізгі көмекшіні жөнелту, міндетті емес ПАРАМЕТРмен, бұл жердегі "
+"ТҮР - төмендегі мәндердің біреуі."
 
 #: ../exo-helper/main.c:70
 msgid "TYPE [PARAMETER]"
@@ -1253,49 +1268,54 @@ msgstr "W3M мәтіндік браузері"
 msgid "X Terminal"
 msgstr "X терминалы"
 
-#: ../exo-open/main.c:84
+#: ../exo-open/main.c:97
 msgid "Usage: exo-open [URLs...]"
 msgstr "Қолданылуы: exo-open [URL-дер...]"
 
-#: ../exo-open/main.c:85
+#: ../exo-open/main.c:98
 msgid "       exo-open --launch TYPE [PARAMETERs...]"
 msgstr "       exo-open --launch ТҮРІ [ПАРАМЕТРЛЕР...]"
 
-#: ../exo-open/main.c:87
+#: ../exo-open/main.c:100
 msgid "  -?, --help                          Print this help message and exit"
-msgstr "  -?, --help                          Осы көмек ақпаратын шығару мен шығу"
+msgstr ""
+"  -?, --help                          Осы көмек ақпаратын шығару мен шығу"
 
-#: ../exo-open/main.c:88
-msgid "  -V, --version                       Print version information and exit"
+#: ../exo-open/main.c:101
+msgid ""
+"  -V, --version                       Print version information and exit"
 msgstr "  -V, --version                       Нұсқа ақпаратын шығару мен шығу"
 
-#: ../exo-open/main.c:90
+#: ../exo-open/main.c:103
 msgid ""
 "  --launch TYPE [PARAMETERs...]       Launch the preferred application of\n"
-"                                      TYPE with the optional PARAMETERs, where\n"
+"                                      TYPE with the optional PARAMETERs, "
+"where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
 "  --launch ТҮР [ПАРАМЕТРлер...]    ТҮРдің таңдамалы қолданбасын\n"
-"                                      міндетті емес ПАРАМЕТРмен жөнелту, бұл жердегі\n"
+"                                      міндетті емес ПАРАМЕТРмен жөнелту, бұл "
+"жердегі\n"
 "                                      ТҮР - төмендегі мәндердің біреуі."
 
-#: ../exo-open/main.c:94
+#: ../exo-open/main.c:107
 msgid ""
-"  --working-directory DIRECTORY       Default working directory for applications\n"
+"  --working-directory DIRECTORY       Default working directory for "
+"applications\n"
 "                                      when using the --launch option."
 msgstr ""
-"  --working-directory БУМА         --launch опциясымен қолданылатын қолданбалар\n"
+"  --working-directory БУМА         --launch опциясымен қолданылатын "
+"қолданбалар\n"
 "                                      үшін негізгі жұмыс бумасы."
 
-#: ../exo-open/main.c:97
+#: ../exo-open/main.c:110
 msgid "The following TYPEs are supported for the --launch command:"
 msgstr "Келесі ТҮРлерге ғана --launch командасында қолдау бар:"
 
-#. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader,
-#. TerminalEmulator),
+#. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader, TerminalEmulator),
 #. * since the exo-helper utility will not accept localized TYPEs.
-#. 
-#: ../exo-open/main.c:103
+#.
+#: ../exo-open/main.c:116
 msgid ""
 "  WebBrowser       - The preferred Web Browser.\n"
 "  MailReader       - The preferred Mail Reader.\n"
@@ -1307,7 +1327,7 @@ msgstr ""
 "  FileManager      - Таңдамалы файлдар басқарушысы.\n"
 "  TerminalEmulator - Таңдамалы терминал эмуляторы."
 
-#: ../exo-open/main.c:108
+#: ../exo-open/main.c:121
 msgid ""
 "If you don't specify the --launch option, exo-open will open all specified\n"
 "URLs with their preferred URL handlers. Else, if you specify the --launch\n"
@@ -1321,22 +1341,26 @@ msgstr ""
 "параметрлерді көрсете аласыз (мыс. терминал эмуляторы үшін терминалда\n"
 "орындалатын командалық жол болуы мүмкін)."
 
-#: ../exo-open/main.c:170
+#: ../exo-open/main.c:183
 #, c-format
-msgid "Launching desktop files is not supported when %s is compiled without GIO-Unix features."
-msgstr "%s нұсқасы GIO-Unix мүмкіндіктерінсіз жиналған кезде desktop файлдарын жөнелтуге болмайды."
+msgid ""
+"Launching desktop files is not supported when %s is compiled without GIO-"
+"Unix features."
+msgstr ""
+"%s нұсқасы GIO-Unix мүмкіндіктерінсіз жиналған кезде desktop файлдарын "
+"жөнелтуге болмайды."
 
-#: ../exo-open/main.c:312
+#: ../exo-open/main.c:246
 #, c-format
 msgid "Failed to launch preferred application for category \"%s\"."
 msgstr "\"%s\" санаты үшін таңдамалы қолданбаны жөнелту сәтсіз аяқталды."
 
-#: ../exo-open/main.c:354
+#: ../exo-open/main.c:552
 #, c-format
 msgid "Unable to detect the URI-scheme of \"%s\"."
 msgstr "\"%s\" үшін URI-схемасын анықтау мүмкін емес."
 
-#: ../exo-open/main.c:364
+#: ../exo-open/main.c:564
 #, c-format
 msgid "Failed to open URI \"%s\"."
 msgstr "\"%s\" URI-ын ашу сәтсіз аяқталды."
@@ -1429,11 +1453,18 @@ msgstr "Интернетті шолу"
 #~ msgid "You are not privileged to mount the volume \"%s\""
 #~ msgstr "\"%s\" бөлімін тіркеу үшін құқығыңыз жеткіліксіз"
 
-#~ msgid "Blank discs cannot be mounted, use a CD recording application like Xfburn to record audio or data on the disc"
-#~ msgstr "Бос дисктерді тіркеуге болмайды, оларға ақпаратты жазу үшін Xfburn сияқты диск қолданбаларын қолданыңыз"
+#~ msgid ""
+#~ "Blank discs cannot be mounted, use a CD recording application like Xfburn "
+#~ "to record audio or data on the disc"
+#~ msgstr ""
+#~ "Бос дисктерді тіркеуге болмайды, оларға ақпаратты жазу үшін Xfburn сияқты "
+#~ "диск қолданбаларын қолданыңыз"
 
-#~ msgid "Audio CDs cannot be mounted, use your favorite audio player to play the audio tracks"
-#~ msgstr "Аудио CD тіркеуге болмайды, аудионы ойнату үшін аудио плеерді қолданыңыз"
+#~ msgid ""
+#~ "Audio CDs cannot be mounted, use your favorite audio player to play the "
+#~ "audio tracks"
+#~ msgstr ""
+#~ "Аудио CD тіркеуге болмайды, аудионы ойнату үшін аудио плеерді қолданыңыз"
 
 #~ msgid "You are not privileged to teardown the crypto layer"
 #~ msgstr "Шифрленген бөлімді оқу үшін құқығыңыз жеткіліксіз"
@@ -1445,7 +1476,9 @@ msgstr "Интернетті шолу"
 #~ msgstr "\"%s\" бөлімін тіркеуден босату үшін құқығыңыз жеткіліксіз"
 
 #~ msgid "An application is preventing the volume \"%s\" from being unmounted"
-#~ msgstr "\"%s\" бөлімін тіркеуден босатуға қандай да бір қолданба кедергі болып отыр"
+#~ msgstr ""
+#~ "\"%s\" бөлімін тіркеуден босатуға қандай да бір қолданба кедергі болып "
+#~ "отыр"
 
 #~ msgid "The volume \"%s\" was probably mounted manually on the command line"
 #~ msgstr "\"%s\" бөлімі командалық жолда қолмен тіркелген сияқты"
@@ -1471,17 +1504,26 @@ msgstr "Интернетті шолу"
 #~ msgid "Unknown error"
 #~ msgstr "Белгісіз қате"
 
-#~ msgid "%s is compiled without GIO-Unix features. Therefore it will probably not work on this system."
-#~ msgstr "%s нұсқасы GIO-Unix мүмкіндіктерінсіз жиналған. Сол үшін осы жүйеде жұмыс істемеуі мүмкін."
+#~ msgid ""
+#~ "%s is compiled without GIO-Unix features. Therefore it will probably not "
+#~ "work on this system."
+#~ msgstr ""
+#~ "%s нұсқасы GIO-Unix мүмкіндіктерінсіз жиналған. Сол үшін осы жүйеде жұмыс "
+#~ "істемеуі мүмкін."
 
 #~ msgid "Must specify HAL device UDI or device file"
 #~ msgstr "HAL құрылғы UDI не құрылғы файлын көрсету керек"
 
-#~ msgid "Must not specify both a HAL device UDI and a device file simultaneously"
+#~ msgid ""
+#~ "Must not specify both a HAL device UDI and a device file simultaneously"
 #~ msgstr "HAL құрылғы UDI мен құрылғы файлын бір уақытта көрсетуге болмайды"
 
-#~ msgid "Cannot mount by HAL device UDI, because HAL support was disabled for this build"
-#~ msgstr "HAL құрылғы UDI бойынша тіркеу мүмкін емес, өйткені HAL қолдауы жинау кезінде сөндірілген"
+#~ msgid ""
+#~ "Cannot mount by HAL device UDI, because HAL support was disabled for this "
+#~ "build"
+#~ msgstr ""
+#~ "HAL құрылғы UDI бойынша тіркеу мүмкін емес, өйткені HAL қолдауы жинау "
+#~ "кезінде сөндірілген"
 
 #~ msgid "The specified UDI \"%s\" is not a valid HAL device UDI"
 #~ msgstr "Көрсетілген \"%s\" UDI дұрыс HAL құрылғы UDI-і емес"
@@ -1513,11 +1555,19 @@ msgstr "Интернетті шолу"
 #~ msgid "Unmounting device"
 #~ msgstr "Құрылғыны тіркеуден босату"
 
-#~ msgid "The device \"%s\" is being unmounted by the system. Please do not remove the media or disconnect the drive."
-#~ msgstr "\"%s\" құрылғысы жүйемен тіркеуден босатылуда. Тасымалдағышты суырмаңыз не дискті алып тастамаңыз."
+#~ msgid ""
+#~ "The device \"%s\" is being unmounted by the system. Please do not remove "
+#~ "the media or disconnect the drive."
+#~ msgstr ""
+#~ "\"%s\" құрылғысы жүйемен тіркеуден босатылуда. Тасымалдағышты суырмаңыз "
+#~ "не дискті алып тастамаңыз."
 
 #~ msgid "Writing data to device"
 #~ msgstr "Құрылғыға ақпаратты жазу"
 
-#~ msgid "There is data that needs to be written to the device \"%s\" before it can be removed. Please do not remove the media or disconnect the drive."
-#~ msgstr "\"%s\" құрылғысын тіркеуден босатуға дейін оған жазу керек боп тұрған ақпарат бар. Дискті не тасымалдағышты алып тастамаңыз."
+#~ msgid ""
+#~ "There is data that needs to be written to the device \"%s\" before it can "
+#~ "be removed. Please do not remove the media or disconnect the drive."
+#~ msgstr ""
+#~ "\"%s\" құрылғысын тіркеуден босатуға дейін оған жазу керек боп тұрған "
+#~ "ақпарат бар. Дискті не тасымалдағышты алып тастамаңыз."
