--- a/po/nb.po
+++ b/po/nb.po
@@ -3,19 +3,19 @@
 # This file is distributed under the same license as the PACKAGE package.
 # Terje Uriansrud <ter@operamail.com>, 2007.
 # Terje Uriansrud <terje@uriansrud.net>, 2008.
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-12-13 17:00+0000\n"
+"POT-Creation-Date: 2011-01-16 16:35+0100\n"
 "PO-Revision-Date: 2007-05-12 17:42+0200\n"
 "Last-Translator: Terje Uriansrud <terje@uriansrud.net>\n"
 "Language-Team: Norwegian Bokmal <i18n-nb@lister.ping.uio.no>\n"
+"Language: nb\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: nb\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:131
@@ -64,8 +64,10 @@ msgstr "Klarte ikke lese fra file \"%s\": %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:890
 #, c-format
-msgid "Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
-msgstr "Klarte ikke laste bilde \"%s\": Ukjent årsak, antakeligvis er filen korrupt."
+msgid ""
+"Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
+msgstr ""
+"Klarte ikke laste bilde \"%s\": Ukjent årsak, antakeligvis er filen korrupt."
 
 #: ../exo/exo-gtk-extensions.c:227
 #, c-format
@@ -285,8 +287,11 @@ msgid "The model for the icon view"
 msgstr "Modellen for ikonvisning"
 
 #: ../exo/exo-icon-view.c:777
-msgid "How the text and icon of each item are positioned relative to each other"
-msgstr "Hvordan tekst og ikoner for hvert element er posisjonert i forhold til hverandre"
+msgid ""
+"How the text and icon of each item are positioned relative to each other"
+msgstr ""
+"Hvordan tekst og ikoner for hvert element er posisjonert i forhold til "
+"hverandre"
 
 #: ../exo/exo-icon-view.c:809
 msgid "Reorderable"
@@ -333,8 +338,12 @@ msgid "Single Click Timeout"
 msgstr "Enkeltklikk tidsgrense"
 
 #: ../exo/exo-icon-view.c:889 ../exo/exo-tree-view.c:172
-msgid "The amount of time after which the item under the mouse cursor will be selected automatically in single click mode"
-msgstr "Tiden det tar før et element under musepekeren blir valgt automatisk i enkeltklikkmodus."
+msgid ""
+"The amount of time after which the item under the mouse cursor will be "
+"selected automatically in single click mode"
+msgstr ""
+"Tiden det tar før et element under musepekeren blir valgt automatisk i "
+"enkeltklikkmodus."
 
 #: ../exo/exo-icon-view.c:904
 msgid "Spacing"
@@ -393,8 +402,12 @@ msgid "_Add a new toolbar"
 msgstr "_Legg til ny verktøylinje"
 
 #: ../exo/exo-toolbars-editor.c:221
-msgid "Drag an item onto the toolbars above to add it, from the toolbars in the items table to remove it."
-msgstr "Dra et element til verktøylinjen for å legge til, eller fra verktøylinjen til elementlisten for å fjerne det"
+msgid ""
+"Drag an item onto the toolbars above to add it, from the toolbars in the "
+"items table to remove it."
+msgstr ""
+"Dra et element til verktøylinjen for å legge til, eller fra verktøylinjen "
+"til elementlisten for å fjerne det"
 
 #: ../exo/exo-toolbars-editor.c:538
 msgid "Separator"
@@ -599,44 +612,37 @@ msgstr "Skallskript"
 msgid "Create Launcher <b>%s</b>"
 msgstr "Lag ny snarvei <b>%s</b>"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:297
 msgid "_Name:"
 msgstr "_Navn:"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:313
 msgid "C_omment:"
 msgstr "K_ommentar:"
 
-#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:329
 msgid "Comm_and:"
 msgstr "Komm_ando."
 
-#. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:344
 msgid "_URL:"
 msgstr "_Url:"
 
-#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:360
 msgid "Working _Directory:"
 msgstr "Arbei_dsmappe:"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:389
 msgid "_Icon:"
 msgstr "_Ikon:"
 
-#. TRANSLATORS: Label for the icon button in "Create Launcher"/"Create Link"
-#. dialog if no icon selected
+#. TRANSLATORS: Label for the icon button in "Create Launcher"/"Create Link" dialog if no icon selected
 #. setup a label to tell that no icon was selected
 #: ../exo-desktop-item-edit/exo-die-editor.c:406
 #: ../exo-desktop-item-edit/exo-die-editor.c:1233
@@ -647,24 +653,26 @@ msgstr "Uten ikon"
 msgid "Options:"
 msgstr "Valg:"
 
-#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to
-#. avoid mnemonic conflicts
-#. *              and sync your translations with the translations in Thunar
-#. and xfce4-panel.
-#. 
+#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
+#. *              and sync your translations with the translations in Thunar and xfce4-panel.
+#.
 #: ../exo-desktop-item-edit/exo-die-editor.c:421
 msgid "Use _startup notification"
 msgstr "Bruk _oppstartsvarsel"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:422
-msgid "Select this option to enable startup notification when the command is run from the file manager or the menu. Not every application supports startup notification."
-msgstr "Velg dette valget for å aktivere oppstartsvarsel når kommandoen kjøres fra filbehandleren eller fra menyen. Ikke alle programmer støtter oppstartsvarsel."
+msgid ""
+"Select this option to enable startup notification when the command is run "
+"from the file manager or the menu. Not every application supports startup "
+"notification."
+msgstr ""
+"Velg dette valget for å aktivere oppstartsvarsel når kommandoen kjøres fra "
+"filbehandleren eller fra menyen. Ikke alle programmer støtter "
+"oppstartsvarsel."
 
-#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to
-#. avoid mnemonic conflicts
-#. *              and sync your translations with the translations in Thunar
-#. and xfce4-panel.
-#. 
+#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
+#. *              and sync your translations with the translations in Thunar and xfce4-panel.
+#.
 #: ../exo-desktop-item-edit/exo-die-editor.c:434
 msgid "Run in _terminal"
 msgstr "Kjør i _terminal"
@@ -815,8 +823,9 @@ msgstr "Prefererte programmer"
 msgid "Select default applications for various services"
 msgstr "Velg standardprogram for forskjellige oppgaver"
 
+#.
 #. Internet
-#. 
+#.
 #: ../exo-helper/exo-helper-chooser-dialog.c:132
 msgid "Internet"
 msgstr "Internett"
@@ -847,8 +856,9 @@ msgstr ""
 "Den prefererte epostleseren brukes for å skrive\n"
 "epost når du klikker på epostadresser."
 
+#.
 #. Utilities
-#. 
+#.
 #: ../exo-helper/exo-helper-chooser-dialog.c:205
 msgid "Utilities"
 msgstr "Verktøy"
@@ -1058,8 +1068,12 @@ msgid "SOCKET ID"
 msgstr "SOKKEL-ID"
 
 #: ../exo-helper/main.c:70
-msgid "Launch the default helper of TYPE with the optional PARAMETER, where TYPE is one of the following values."
-msgstr "Start standard hjelper av TYPE med valgfritt PARAMETER, hvor TYPE er en av følgende verdier."
+msgid ""
+"Launch the default helper of TYPE with the optional PARAMETER, where TYPE is "
+"one of the following values."
+msgstr ""
+"Start standard hjelper av TYPE med valgfritt PARAMETER, hvor TYPE er en av "
+"følgende verdier."
 
 #: ../exo-helper/main.c:70
 msgid "TYPE [PARAMETER]"
@@ -1262,16 +1276,20 @@ msgstr "       exo-open --launch TYPE [PARAMETERs...]"
 
 #: ../exo-open/main.c:100
 msgid "  -?, --help                          Print this help message and exit"
-msgstr "  -?, --help                          Skriv ut denne meldingen og avslutt"
+msgstr ""
+"  -?, --help                          Skriv ut denne meldingen og avslutt"
 
 #: ../exo-open/main.c:101
-msgid "  -V, --version                       Print version information and exit"
-msgstr "  -V, --version                       Skriv ut versjonsinformasjon og avslutt"
+msgid ""
+"  -V, --version                       Print version information and exit"
+msgstr ""
+"  -V, --version                       Skriv ut versjonsinformasjon og avslutt"
 
 #: ../exo-open/main.c:103
 msgid ""
 "  --launch TYPE [PARAMETERs...]       Launch the preferred application of\n"
-"                                      TYPE with the optional PARAMETERs, where\n"
+"                                      TYPE with the optional PARAMETERs, "
+"where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
 "  --launch TYPE [PARAMETRE...]        Start det prefererte programmet av\n"
@@ -1280,7 +1298,8 @@ msgstr ""
 
 #: ../exo-open/main.c:107
 msgid ""
-"  --working-directory DIRECTORY       Default working directory for applications\n"
+"  --working-directory DIRECTORY       Default working directory for "
+"applications\n"
 "                                      when using the --launch option."
 msgstr ""
 "  --working-directory MAPPE           Standard arbeidsmappe for programmer\n"
@@ -1290,10 +1309,9 @@ msgstr ""
 msgid "The following TYPEs are supported for the --launch command:"
 msgstr "Følgende typer er støttet for --launch kommandoen:"
 
-#. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader,
-#. TerminalEmulator),
+#. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader, TerminalEmulator),
 #. * since the exo-helper utility will not accept localized TYPEs.
-#. 
+#.
 #: ../exo-open/main.c:116
 msgid ""
 "  WebBrowser       - The preferred Web Browser.\n"
@@ -1322,8 +1340,12 @@ msgstr ""
 
 #: ../exo-open/main.c:183
 #, c-format
-msgid "Launching desktop files is not supported when %s is compiled without GIO-Unix features."
-msgstr "Oppstart av desktop filer er ikke støttet når %s er kompilert uten GIO-Unix funksjoner."
+msgid ""
+"Launching desktop files is not supported when %s is compiled without GIO-"
+"Unix features."
+msgstr ""
+"Oppstart av desktop filer er ikke støttet når %s er kompilert uten GIO-Unix "
+"funksjoner."
 
 #: ../exo-open/main.c:246
 #, c-format
@@ -1428,10 +1450,16 @@ msgstr "Surfe på nettet"
 #~ msgid "You are not privileged to mount the volume \"%s\""
 #~ msgstr "Du har ikke rettigheter til å montere enheten \"%s\""
 
-#~ msgid "Blank discs cannot be mounted, use a CD recording application like Xfburn to record audio or data on the disc"
-#~ msgstr "Tomt media kan ikke monteres, bruk et CD-brenne program som Xfburn til å lagre musikk eller data på disken"
+#~ msgid ""
+#~ "Blank discs cannot be mounted, use a CD recording application like Xfburn "
+#~ "to record audio or data on the disc"
+#~ msgstr ""
+#~ "Tomt media kan ikke monteres, bruk et CD-brenne program som Xfburn til å "
+#~ "lagre musikk eller data på disken"
 
-#~ msgid "Audio CDs cannot be mounted, use your favorite audio player to play the audio tracks"
+#~ msgid ""
+#~ "Audio CDs cannot be mounted, use your favorite audio player to play the "
+#~ "audio tracks"
 #~ msgstr "Lydcd kan ikke monteres, bruk Xfmedia for å spille lydsporene"
 
 #~ msgid "You are not privileged to teardown the crypto layer"
@@ -1473,11 +1501,16 @@ msgstr "Surfe på nettet"
 #~ msgid "Must specify HAL device UDI or device file"
 #~ msgstr "Må spesifisere HAL enhets UDI eller enhetsfil"
 
-#~ msgid "Must not specify both a HAL device UDI and a device file simultaneously"
+#~ msgid ""
+#~ "Must not specify both a HAL device UDI and a device file simultaneously"
 #~ msgstr "Kan ikke angi både HAL enhets UDI og en enhetsfil samtidig"
 
-#~ msgid "Cannot mount by HAL device UDI, because HAL support was disabled for this build"
-#~ msgstr "Kan ikke montere med HAL enhets UDI fordi HAL støtte var deaktivert for dette bygget"
+#~ msgid ""
+#~ "Cannot mount by HAL device UDI, because HAL support was disabled for this "
+#~ "build"
+#~ msgstr ""
+#~ "Kan ikke montere med HAL enhets UDI fordi HAL støtte var deaktivert for "
+#~ "dette bygget"
 
 #~ msgid "The specified UDI \"%s\" is not a valid HAL device UDI"
 #~ msgstr "Den angitte UDI \"%s\" er ikke en gyldig HAL enhets UDI"
@@ -1509,14 +1542,22 @@ msgstr "Surfe på nettet"
 #~ msgid "Unmounting device"
 #~ msgstr "Demonterer enhet"
 
-#~ msgid "The device \"%s\" is being unmounted by the system. Please do not remove the media or disconnect the drive."
-#~ msgstr "Enheten \"%s\" demonteres nå av systemet. Ikke fjerne eller koble fra enheten."
+#~ msgid ""
+#~ "The device \"%s\" is being unmounted by the system. Please do not remove "
+#~ "the media or disconnect the drive."
+#~ msgstr ""
+#~ "Enheten \"%s\" demonteres nå av systemet. Ikke fjerne eller koble fra "
+#~ "enheten."
 
 #~ msgid "Writing data to device"
 #~ msgstr "Skriver data til enheten"
 
-#~ msgid "There is data that needs to be written to the device \"%s\" before it can be removed. Please do not remove the media or disconnect the drive."
-#~ msgstr "Data må skrives til enheten \"%s\" før den kan frakobles. Ikke frakoble mediet eller fjern enheten"
+#~ msgid ""
+#~ "There is data that needs to be written to the device \"%s\" before it can "
+#~ "be removed. Please do not remove the media or disconnect the drive."
+#~ msgstr ""
+#~ "Data må skrives til enheten \"%s\" før den kan frakobles. Ikke frakoble "
+#~ "mediet eller fjern enheten"
 
 #~ msgid "Unable to open \"%s\""
 #~ msgstr "Klarte ikke åpne \"%s\""
