--- a/po/sk.po
+++ b/po/sk.po
@@ -6,14 +6,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-09-15 16:00+0000\n"
+"POT-Creation-Date: 2011-01-16 16:35+0100\n"
 "PO-Revision-Date: 2009-12-06 14:03+0100\n"
 "Last-Translator: Robert Hartl <hartl.robert@gmail.com>\n"
 "Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
+"Language: sk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8-bit\n"
-"Language: sk\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 1 : (n>=2 && n<=4) ? 2 : 0;\n"
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:131
@@ -62,8 +62,11 @@ msgstr "Nepodarilo sa prečítať súbor \"%s\": %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:890
 #, c-format
-msgid "Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
-msgstr "Nepodarilo sa načítať obrázok \"%s\": Neznámy dôvod, pravdepodobne je súbor s obrázkom poškodený."
+msgid ""
+"Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
+msgstr ""
+"Nepodarilo sa načítať obrázok \"%s\": Neznámy dôvod, pravdepodobne je súbor "
+"s obrázkom poškodený."
 
 #: ../exo/exo-gtk-extensions.c:227
 #, c-format
@@ -273,7 +276,8 @@ msgstr "Označiť stĺpec"
 
 #: ../exo/exo-icon-view.c:748
 msgid "Model column used to retrieve the text if using Pango markup"
-msgstr "Stĺpec modelu používaný pre získanie textu, ak sa používajú značky Pango"
+msgstr ""
+"Stĺpec modelu používaný pre získanie textu, ak sa používajú značky Pango"
 
 #: ../exo/exo-icon-view.c:762
 msgid "Icon View Model"
@@ -284,7 +288,8 @@ msgid "The model for the icon view"
 msgstr "Model pre ikonový pohľad"
 
 #: ../exo/exo-icon-view.c:777
-msgid "How the text and icon of each item are positioned relative to each other"
+msgid ""
+"How the text and icon of each item are positioned relative to each other"
 msgstr "Ako sú text a ikony každej položky navzájom relatívne umiestnené"
 
 #: ../exo/exo-icon-view.c:809
@@ -332,8 +337,12 @@ msgid "Single Click Timeout"
 msgstr "Vypršanie limitu pre jednoduché kliknutie"
 
 #: ../exo/exo-icon-view.c:889 ../exo/exo-tree-view.c:172
-msgid "The amount of time after which the item under the mouse cursor will be selected automatically in single click mode"
-msgstr "Doba, po ktorej pod kurzorom myši v režime jednoduchého kliknutia sa označí sama"
+msgid ""
+"The amount of time after which the item under the mouse cursor will be "
+"selected automatically in single click mode"
+msgstr ""
+"Doba, po ktorej pod kurzorom myši v režime jednoduchého kliknutia sa označí "
+"sama"
 
 #: ../exo/exo-icon-view.c:904
 msgid "Spacing"
@@ -392,8 +401,12 @@ msgid "_Add a new toolbar"
 msgstr "_Pridať nový panel nástrojov"
 
 #: ../exo/exo-toolbars-editor.c:221
-msgid "Drag an item onto the toolbars above to add it, from the toolbars in the items table to remove it."
-msgstr "Položku pridajte na panel nástrojov pretiahnutím z tabuľky nástrojov. Opačným postupom ju odoberte."
+msgid ""
+"Drag an item onto the toolbars above to add it, from the toolbars in the "
+"items table to remove it."
+msgstr ""
+"Položku pridajte na panel nástrojov pretiahnutím z tabuľky nástrojov. "
+"Opačným postupom ju odoberte."
 
 #: ../exo/exo-toolbars-editor.c:538
 msgid "Separator"
@@ -522,7 +535,7 @@ msgid "  --strip-content   Remove node contents from XML files\n"
 msgstr "  --strip-content   Odstráni obsah uzlov zo súborov XML\n"
 
 #: ../exo-csource/main.c:304 ../exo-desktop-item-edit/main.c:177
-#: ../exo-open/main.c:258
+#: ../exo-open/main.c:471
 #, c-format
 msgid ""
 "Copyright (c) %s\n"
@@ -538,7 +551,7 @@ msgstr ""
 "\n"
 
 #: ../exo-csource/main.c:308 ../exo-desktop-item-edit/main.c:181
-#: ../exo-open/main.c:262
+#: ../exo-open/main.c:475
 #, c-format
 msgid ""
 "%s comes with ABSOLUTELY NO WARRANTY,\n"
@@ -554,7 +567,7 @@ msgstr ""
 "\n"
 
 #: ../exo-csource/main.c:312 ../exo-desktop-item-edit/main.c:185
-#: ../exo-open/main.c:266
+#: ../exo-open/main.c:479
 #, c-format
 msgid "Please report bugs to <%s>.\n"
 msgstr "Prosíme, hláste chyby na <%s>.\n"
@@ -599,44 +612,37 @@ msgstr "Shellové skripty"
 msgid "Create Launcher <b>%s</b>"
 msgstr "Vytvoriť spúšťač <b>%s</b>"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:297
 msgid "_Name:"
 msgstr "_Názov:"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:313
 msgid "C_omment:"
 msgstr "_Komentár:"
 
-#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:329
 msgid "Comm_and:"
 msgstr "_Príkaz:"
 
-#. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:344
 msgid "_URL:"
 msgstr "_Adresa URL:"
 
-#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:360
 msgid "Working _Directory:"
 msgstr ""
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:389
 msgid "_Icon:"
 msgstr "_Ikona"
 
-#. TRANSLATORS: Label for the icon button in "Create Launcher"/"Create Link"
-#. dialog if no icon selected
+#. TRANSLATORS: Label for the icon button in "Create Launcher"/"Create Link" dialog if no icon selected
 #. setup a label to tell that no icon was selected
 #: ../exo-desktop-item-edit/exo-die-editor.c:406
 #: ../exo-desktop-item-edit/exo-die-editor.c:1233
@@ -647,24 +653,26 @@ msgstr "Žiadna ikona"
 msgid "Options:"
 msgstr "Voľby:"
 
-#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to
-#. avoid mnemonic conflicts
-#. *              and sync your translations with the translations in Thunar
-#. and xfce4-panel.
-#. 
+#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
+#. *              and sync your translations with the translations in Thunar and xfce4-panel.
+#.
 #: ../exo-desktop-item-edit/exo-die-editor.c:421
 msgid "Use _startup notification"
 msgstr "Použiť oznámenie pri _spustení"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:422
-msgid "Select this option to enable startup notification when the command is run from the file manager or the menu. Not every application supports startup notification."
-msgstr "Zvoľte túto voľbu pre povolenie oznámenia pri spustení, ak je príkaz spustený zo správcu súborov alebo z hlavnej ponuky. Nie každá aplikácia podporuje oznámenie pri štarte."
+msgid ""
+"Select this option to enable startup notification when the command is run "
+"from the file manager or the menu. Not every application supports startup "
+"notification."
+msgstr ""
+"Zvoľte túto voľbu pre povolenie oznámenia pri spustení, ak je príkaz "
+"spustený zo správcu súborov alebo z hlavnej ponuky. Nie každá aplikácia "
+"podporuje oznámenie pri štarte."
 
-#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to
-#. avoid mnemonic conflicts
-#. *              and sync your translations with the translations in Thunar
-#. and xfce4-panel.
-#. 
+#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
+#. *              and sync your translations with the translations in Thunar and xfce4-panel.
+#.
 #: ../exo-desktop-item-edit/exo-die-editor.c:434
 msgid "Run in _terminal"
 msgstr "Spustiť v _termináli"
@@ -816,8 +824,9 @@ msgstr "Uprednostňované aplikácie"
 msgid "Select default applications for various services"
 msgstr "Vyberte predvolenú aplikáciu pre rôzne služby"
 
+#.
 #. Internet
-#. 
+#.
 #: ../exo-helper/exo-helper-chooser-dialog.c:132
 msgid "Internet"
 msgstr "Internet"
@@ -850,8 +859,9 @@ msgstr ""
 "predvolený program pre písanie elektronickej\n"
 "pošty pri kliknutí na e-mailovú adresu."
 
+#.
 #. Utilities
-#. 
+#.
 #: ../exo-helper/exo-helper-chooser-dialog.c:205
 msgid "Utilities"
 msgstr "Nástroje"
@@ -1022,14 +1032,16 @@ msgstr ""
 msgid "No command specified"
 msgstr "Nebol zadaný žiadny príkaz"
 
-#: ../exo-helper/exo-helper.c:684
+#: ../exo-helper/exo-helper.c:688 ../exo-helper/exo-helper.c:722
 #, c-format
 msgid "Failed to open %s for writing"
 msgstr "Nepodarilo sa otvoriť súbor helpers rc pre zápis"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
-msgstr "Uprednostňované aplikácie (webový prehliadač, e-mailový klient a emulátor terminálu)"
+msgstr ""
+"Uprednostňované aplikácie (webový prehliadač, e-mailový klient a emulátor "
+"terminálu)"
 
 #: ../exo-helper/main.c:41
 msgid "Failed to execute default Web Browser"
@@ -1064,8 +1076,12 @@ msgid "SOCKET ID"
 msgstr "SOCKET ID"
 
 #: ../exo-helper/main.c:70
-msgid "Launch the default helper of TYPE with the optional PARAMETER, where TYPE is one of the following values."
-msgstr "Spustiť predvoleného pomocníka typu TYP s voliteľným PARAMETRom, kde TYP môže nadobúdať jednu z nasledujúcich hodnôt."
+msgid ""
+"Launch the default helper of TYPE with the optional PARAMETER, where TYPE is "
+"one of the following values."
+msgstr ""
+"Spustiť predvoleného pomocníka typu TYP s voliteľným PARAMETRom, kde TYP "
+"môže nadobúdať jednu z nasledujúcich hodnôt."
 
 #: ../exo-helper/main.c:70
 msgid "TYPE [PARAMETER]"
@@ -1174,6 +1190,10 @@ msgstr "Galeon internetový prehliadač"
 msgid "GNOME Terminal"
 msgstr "GNOME Terminál"
 
+#: ../exo-helper/helpers/icedove.desktop.in.in.h:1
+msgid "Icedove"
+msgstr ""
+
 #: ../exo-helper/helpers/kmail.desktop.in.in.h:1
 msgid "KMail"
 msgstr "KMail"
@@ -1254,47 +1274,51 @@ msgstr "W3M Text Browser"
 msgid "X Terminal"
 msgstr "X Terminál"
 
-#: ../exo-open/main.c:84
+#: ../exo-open/main.c:97
 msgid "Usage: exo-open [URLs...]"
 msgstr "Použitie: exo-open [AdresyURL...]"
 
-#: ../exo-open/main.c:85
+#: ../exo-open/main.c:98
 msgid "       exo-open --launch TYPE [PARAMETERs...]"
 msgstr "       exo-open --launch TYP [PARAMETRE...]"
 
-#: ../exo-open/main.c:87
+#: ../exo-open/main.c:100
 msgid "  -?, --help                          Print this help message and exit"
-msgstr "  -?, --help                          Zobrazí tohto pomocníka a ukončí sa"
+msgstr ""
+"  -?, --help                          Zobrazí tohto pomocníka a ukončí sa"
 
-#: ../exo-open/main.c:88
-msgid "  -V, --version                       Print version information and exit"
-msgstr "  -V, --version                       Zobrazí informácie o verzii a ukončí sa"
+#: ../exo-open/main.c:101
+msgid ""
+"  -V, --version                       Print version information and exit"
+msgstr ""
+"  -V, --version                       Zobrazí informácie o verzii a ukončí sa"
 
-#: ../exo-open/main.c:90
+#: ../exo-open/main.c:103
 msgid ""
 "  --launch TYPE [PARAMETERs...]       Launch the preferred application of\n"
-"                                      TYPE with the optional PARAMETERs, where\n"
+"                                      TYPE with the optional PARAMETERs, "
+"where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
 "  --launch TYP [PARAMETRE...]         Spustí uprednostňovanú aplikáciu typu\n"
 "                                      TYP s voliteľnými PARAMETRAMI, kde\n"
 "                                      TYP je jedna z hodnôt uvedených nižšie."
 
-#: ../exo-open/main.c:94
+#: ../exo-open/main.c:107
 msgid ""
-"  --working-directory DIRECTORY       Default working directory for applications\n"
+"  --working-directory DIRECTORY       Default working directory for "
+"applications\n"
 "                                      when using the --launch option."
 msgstr ""
 
-#: ../exo-open/main.c:97
+#: ../exo-open/main.c:110
 msgid "The following TYPEs are supported for the --launch command:"
 msgstr "Pri použití prepínača --launch sú podporované nasledujúce typy:"
 
-#. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader,
-#. TerminalEmulator),
+#. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader, TerminalEmulator),
 #. * since the exo-helper utility will not accept localized TYPEs.
-#. 
-#: ../exo-open/main.c:103
+#.
+#: ../exo-open/main.c:116
 msgid ""
 "  WebBrowser       - The preferred Web Browser.\n"
 "  MailReader       - The preferred Mail Reader.\n"
@@ -1306,7 +1330,7 @@ msgstr ""
 "..FileManager       - Uprednosťňovaný správca súborov.\n"
 "  TerminalEmulator - Uprednostňovaný emulátor terminálu."
 
-#: ../exo-open/main.c:108
+#: ../exo-open/main.c:121
 msgid ""
 "If you don't specify the --launch option, exo-open will open all specified\n"
 "URLs with their preferred URL handlers. Else, if you specify the --launch\n"
@@ -1315,22 +1339,26 @@ msgid ""
 "you can pass the command line that should be run in the terminal)."
 msgstr ""
 
-#: ../exo-open/main.c:170
+#: ../exo-open/main.c:183
 #, c-format
-msgid "Launching desktop files is not supported when %s is compiled without GIO-Unix features."
-msgstr "Spúšťanie súborov plochy nie je podporované ak je %s skompilovaný bez funkcií GIO-Unix."
+msgid ""
+"Launching desktop files is not supported when %s is compiled without GIO-"
+"Unix features."
+msgstr ""
+"Spúšťanie súborov plochy nie je podporované ak je %s skompilovaný bez "
+"funkcií GIO-Unix."
 
-#: ../exo-open/main.c:312
+#: ../exo-open/main.c:246
 #, c-format
 msgid "Failed to launch preferred application for category \"%s\"."
 msgstr "Nepodarilo sa spustiť uprednostňovanú aplikáciu pre kategóriu \"%s\"."
 
-#: ../exo-open/main.c:354
+#: ../exo-open/main.c:552
 #, c-format
 msgid "Unable to detect the URI-scheme of \"%s\"."
 msgstr "Nemožno nájsť schému URI \"%s\"."
 
-#: ../exo-open/main.c:364
+#: ../exo-open/main.c:564
 #, c-format
 msgid "Failed to open URI \"%s\"."
 msgstr "Nepodarilo sa otvoriť URI \"%s\"."
@@ -1423,11 +1451,19 @@ msgstr ""
 #~ msgid "You are not privileged to mount the volume \"%s\""
 #~ msgstr "Nieste oprávnení pripojiť zväzok \"%s\""
 
-#~ msgid "Blank discs cannot be mounted, use a CD recording application like Xfburn to record audio or data on the disc"
-#~ msgstr "Prázdne disky nemôžu byť pripojené. Pre napálenie dát alebo hudby na disk, použite napríklad aplikáciu Xfburn"
+#~ msgid ""
+#~ "Blank discs cannot be mounted, use a CD recording application like Xfburn "
+#~ "to record audio or data on the disc"
+#~ msgstr ""
+#~ "Prázdne disky nemôžu byť pripojené. Pre napálenie dát alebo hudby na "
+#~ "disk, použite napríklad aplikáciu Xfburn"
 
-#~ msgid "Audio CDs cannot be mounted, use your favorite audio player to play the audio tracks"
-#~ msgstr "Nemožno pripojiť hudobné CD, pre prehrávanie hudobných stôp použite svoj obľúbený prehrávač"
+#~ msgid ""
+#~ "Audio CDs cannot be mounted, use your favorite audio player to play the "
+#~ "audio tracks"
+#~ msgstr ""
+#~ "Nemožno pripojiť hudobné CD, pre prehrávanie hudobných stôp použite svoj "
+#~ "obľúbený prehrávač"
 
 #~ msgid "You are not privileged to teardown the crypto layer"
 #~ msgstr "Nie ste oprávnený k vypnutiu šifrovacej vrstvy"
@@ -1442,7 +1478,8 @@ msgstr ""
 #~ msgstr "Aplikácia zabraňuje odpojeniu zväzku \"%s\""
 
 #~ msgid "The volume \"%s\" was probably mounted manually on the command line"
-#~ msgstr "Zväzok \"%s\" bol pravdepodobne pripojený ručne z príkazového riadku"
+#~ msgstr ""
+#~ "Zväzok \"%s\" bol pravdepodobne pripojený ručne z príkazového riadku"
 
 #~ msgid "Eject rather than mount"
 #~ msgstr "Uprednostniť vysunutie pred pripojením"
@@ -1468,11 +1505,16 @@ msgstr ""
 #~ msgid "Must specify HAL device UDI or device file"
 #~ msgstr "Musíte uviesť číslo UDI zariadenia HAL alebo súbor zariadenia"
 
-#~ msgid "Must not specify both a HAL device UDI and a device file simultaneously"
+#~ msgid ""
+#~ "Must not specify both a HAL device UDI and a device file simultaneously"
 #~ msgstr "Nesmiete uviesť čislo UDI zariadenia HAL a súbor zariadenia súčasne"
 
-#~ msgid "Cannot mount by HAL device UDI, because HAL support was disabled for this build"
-#~ msgstr "Nemožno pripojiť zariadenie HAL pomocou čísla UDI, pretože podpora HAL v tomto zostavení nebola povalená"
+#~ msgid ""
+#~ "Cannot mount by HAL device UDI, because HAL support was disabled for this "
+#~ "build"
+#~ msgstr ""
+#~ "Nemožno pripojiť zariadenie HAL pomocou čísla UDI, pretože podpora HAL v "
+#~ "tomto zostavení nebola povalená"
 
 #~ msgid "The specified UDI \"%s\" is not a valid HAL device UDI"
 #~ msgstr "Uvedené číslo UDI \"%s\" nie je platné čislo UDI zariadenia HAL"
@@ -1504,14 +1546,22 @@ msgstr ""
 #~ msgid "Unmounting device"
 #~ msgstr "Odpojovanie zariadenia"
 
-#~ msgid "The device \"%s\" is being unmounted by the system. Please do not remove the media or disconnect the drive."
-#~ msgstr "Zariadnie \"%s\" sa odpojuje od systému. Nevyberajte médium ani neodpojujte jednotku."
+#~ msgid ""
+#~ "The device \"%s\" is being unmounted by the system. Please do not remove "
+#~ "the media or disconnect the drive."
+#~ msgstr ""
+#~ "Zariadnie \"%s\" sa odpojuje od systému. Nevyberajte médium ani "
+#~ "neodpojujte jednotku."
 
 #~ msgid "Writing data to device"
 #~ msgstr "Zapisujú sa dáta na jednotku"
 
-#~ msgid "There is data that needs to be written to the device \"%s\" before it can be removed. Please do not remove the media or disconnect the drive."
-#~ msgstr "Pred odobratím je potrebné zapísať dáta na jednotku \"%s\". Neodoberajte médium ani neodpojujte jednotku."
+#~ msgid ""
+#~ "There is data that needs to be written to the device \"%s\" before it can "
+#~ "be removed. Please do not remove the media or disconnect the drive."
+#~ msgstr ""
+#~ "Pred odobratím je potrebné zapísať dáta na jednotku \"%s\". Neodoberajte "
+#~ "médium ani neodpojujte jednotku."
 
 #~ msgid "Unable to open \"%s\""
 #~ msgstr "Nie je možné otvoriť \"%s\""
