--- a/po/sv.po
+++ b/po/sv.po
@@ -3,19 +3,19 @@
 # This file is distributed under the same license as exo.
 # Alexander Toresson <alexander.toresson@gmail.com>, 2005.
 # Daniel Nylander <po@danielnylander.se>, 2007, 2008, 2009.
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: libexo\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-12-18 17:00+0000\n"
+"POT-Creation-Date: 2011-01-16 16:35+0100\n"
 "PO-Revision-Date: 2010-10-17 17:09+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
+"Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sv\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:131
@@ -64,8 +64,11 @@ msgstr "Misslyckades med att läsa filen \"%s\": %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:890
 #, c-format
-msgid "Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
-msgstr "Misslyckades med att läsa in bilden \"%s\": Okänd anledning, antagligen en skadad bildfil"
+msgid ""
+"Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
+msgstr ""
+"Misslyckades med att läsa in bilden \"%s\": Okänd anledning, antagligen en "
+"skadad bildfil"
 
 #: ../exo/exo-gtk-extensions.c:227
 #, c-format
@@ -285,7 +288,8 @@ msgid "The model for the icon view"
 msgstr "Modellen för ikonvyn"
 
 #: ../exo/exo-icon-view.c:777
-msgid "How the text and icon of each item are positioned relative to each other"
+msgid ""
+"How the text and icon of each item are positioned relative to each other"
 msgstr "Hur texten och ikonen i varje objekt placeras relativt till varandra"
 
 #: ../exo/exo-icon-view.c:809
@@ -333,8 +337,12 @@ msgid "Single Click Timeout"
 msgstr "Tidsgräns för enkelklick"
 
 #: ../exo/exo-icon-view.c:889 ../exo/exo-tree-view.c:172
-msgid "The amount of time after which the item under the mouse cursor will be selected automatically in single click mode"
-msgstr "Tiden det tar innan objektet som är under muspekaren automatiskt kommer att väljas i enkelklicksläge"
+msgid ""
+"The amount of time after which the item under the mouse cursor will be "
+"selected automatically in single click mode"
+msgstr ""
+"Tiden det tar innan objektet som är under muspekaren automatiskt kommer att "
+"väljas i enkelklicksläge"
 
 #: ../exo/exo-icon-view.c:904
 msgid "Spacing"
@@ -393,8 +401,12 @@ msgid "_Add a new toolbar"
 msgstr "_Lägg till en ny verktygsrad"
 
 #: ../exo/exo-toolbars-editor.c:221
-msgid "Drag an item onto the toolbars above to add it, from the toolbars in the items table to remove it."
-msgstr "Dra ett objekt till verktygsraderna ovan för att lägga till det, från verktygsraderna till objekttabellen för att ta bort det."
+msgid ""
+"Drag an item onto the toolbars above to add it, from the toolbars in the "
+"items table to remove it."
+msgstr ""
+"Dra ett objekt till verktygsraderna ovan för att lägga till det, från "
+"verktygsraderna till objekttabellen för att ta bort det."
 
 #: ../exo/exo-toolbars-editor.c:538
 msgid "Separator"
@@ -600,44 +612,37 @@ msgstr "Skalskript"
 msgid "Create Launcher <b>%s</b>"
 msgstr "Skapa programstartare <b>%s</b>"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:297
 msgid "_Name:"
 msgstr "_Namn:"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:313
 msgid "C_omment:"
 msgstr "K_ommentar:"
 
-#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:329
 msgid "Comm_and:"
 msgstr "Komm_ando:"
 
-#. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:344
 msgid "_URL:"
 msgstr "_URL:"
 
-#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:360
 msgid "Working _Directory:"
 msgstr "Arbets_katalog:"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:389
 msgid "_Icon:"
 msgstr "_Ikon:"
 
-#. TRANSLATORS: Label for the icon button in "Create Launcher"/"Create Link"
-#. dialog if no icon selected
+#. TRANSLATORS: Label for the icon button in "Create Launcher"/"Create Link" dialog if no icon selected
 #. setup a label to tell that no icon was selected
 #: ../exo-desktop-item-edit/exo-die-editor.c:406
 #: ../exo-desktop-item-edit/exo-die-editor.c:1233
@@ -648,31 +653,34 @@ msgstr "Ingen ikon"
 msgid "Options:"
 msgstr "Alternativ:"
 
-#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to
-#. avoid mnemonic conflicts
-#. *              and sync your translations with the translations in Thunar
-#. and xfce4-panel.
-#. 
+#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
+#. *              and sync your translations with the translations in Thunar and xfce4-panel.
+#.
 #: ../exo-desktop-item-edit/exo-die-editor.c:421
 msgid "Use _startup notification"
 msgstr "Använd upp_startsnotifiering"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:422
-msgid "Select this option to enable startup notification when the command is run from the file manager or the menu. Not every application supports startup notification."
-msgstr "Välj det här alternativet för att aktivera uppstartsnotifiering när kommandot körs från filhanteraren eller menyn. Inte alla program har stöd för uppstartsnotifiering."
+msgid ""
+"Select this option to enable startup notification when the command is run "
+"from the file manager or the menu. Not every application supports startup "
+"notification."
+msgstr ""
+"Välj det här alternativet för att aktivera uppstartsnotifiering när "
+"kommandot körs från filhanteraren eller menyn. Inte alla program har stöd "
+"för uppstartsnotifiering."
 
-#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to
-#. avoid mnemonic conflicts
-#. *              and sync your translations with the translations in Thunar
-#. and xfce4-panel.
-#. 
+#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
+#. *              and sync your translations with the translations in Thunar and xfce4-panel.
+#.
 #: ../exo-desktop-item-edit/exo-die-editor.c:434
 msgid "Run in _terminal"
 msgstr "Kör i _terminal"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:435
 msgid "Select this option to run the command in a terminal window."
-msgstr "Välj det här alternativet för att köra kommandot i ett terminalfönster."
+msgstr ""
+"Välj det här alternativet för att köra kommandot i ett terminalfönster."
 
 #. allocate the icon chooser dialog
 #: ../exo-desktop-item-edit/exo-die-editor.c:590
@@ -816,8 +824,9 @@ msgstr "Föredragna program"
 msgid "Select default applications for various services"
 msgstr "Välj standardprogram för olika tjänster"
 
+#.
 #. Internet
-#. 
+#.
 #: ../exo-helper/exo-helper-chooser-dialog.c:132
 msgid "Internet"
 msgstr "Internet"
@@ -850,8 +859,9 @@ msgstr ""
 "för att skriva meddelanden när du klickar på\n"
 "e-postadresser."
 
+#.
 #. Utilities
-#. 
+#.
 #: ../exo-helper/exo-helper-chooser-dialog.c:205
 msgid "Utilities"
 msgstr "Verktyg"
@@ -1063,8 +1073,12 @@ msgid "SOCKET ID"
 msgstr "UTTAGS-ID"
 
 #: ../exo-helper/main.c:70
-msgid "Launch the default helper of TYPE with the optional PARAMETER, where TYPE is one of the following values."
-msgstr "Kör standardhjälparen för TYP med frivilliga PARAMETRAR, där TYP är ett av följande värden."
+msgid ""
+"Launch the default helper of TYPE with the optional PARAMETER, where TYPE is "
+"one of the following values."
+msgstr ""
+"Kör standardhjälparen för TYP med frivilliga PARAMETRAR, där TYP är ett av "
+"följande värden."
 
 #: ../exo-helper/main.c:70
 msgid "TYPE [PARAMETER]"
@@ -1268,16 +1282,22 @@ msgstr "       exo-open --launch TYP [PARAMETRAR...]"
 
 #: ../exo-open/main.c:100
 msgid "  -?, --help                          Print this help message and exit"
-msgstr "  -?, --help                          Skriv ut det här hjälpmeddelandet och avsluta"
+msgstr ""
+"  -?, --help                          Skriv ut det här hjälpmeddelandet och "
+"avsluta"
 
 #: ../exo-open/main.c:101
-msgid "  -V, --version                       Print version information and exit"
-msgstr "  -V, --version                       Skriv ut versionsinformation och avsluta"
+msgid ""
+"  -V, --version                       Print version information and exit"
+msgstr ""
+"  -V, --version                       Skriv ut versionsinformation och "
+"avsluta"
 
 #: ../exo-open/main.c:103
 msgid ""
 "  --launch TYPE [PARAMETERs...]       Launch the preferred application of\n"
-"                                      TYPE with the optional PARAMETERs, where\n"
+"                                      TYPE with the optional PARAMETERs, "
+"where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
 "  --launch TYP [PARAMETRAR...]        Kör det föredragna programmet för TYP\n"
@@ -1286,7 +1306,8 @@ msgstr ""
 
 #: ../exo-open/main.c:107
 msgid ""
-"  --working-directory DIRECTORY       Default working directory for applications\n"
+"  --working-directory DIRECTORY       Default working directory for "
+"applications\n"
 "                                      when using the --launch option."
 msgstr ""
 "  --working-directory KATALOG         Standardarbetskatalog för program\n"
@@ -1296,10 +1317,9 @@ msgstr ""
 msgid "The following TYPEs are supported for the --launch command:"
 msgstr "De följande TYPerna stöds för kommandot --launch:"
 
-#. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader,
-#. TerminalEmulator),
+#. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader, TerminalEmulator),
 #. * since the exo-helper utility will not accept localized TYPEs.
-#. 
+#.
 #: ../exo-open/main.c:116
 msgid ""
 "  WebBrowser       - The preferred Web Browser.\n"
@@ -1322,19 +1342,25 @@ msgid ""
 msgstr ""
 "Om du inte anger --launch kommer exo-open öppna alla angivna URL:er med\n"
 "deras föredragna URL-hanterare. Annars, om du anger --launch, kan du välja\n"
-"vilken av de föredragna programmen du vill köra, och de kan ge extra parametrar\n"
+"vilken av de föredragna programmen du vill köra, och de kan ge extra "
+"parametrar\n"
 "till program (t.ex. kan du ange kommandot som ska köras i terminalen\n"
 "med TerminalEmulator)."
 
 #: ../exo-open/main.c:183
 #, c-format
-msgid "Launching desktop files is not supported when %s is compiled without GIO-Unix features."
-msgstr "Körning av skrivbordsfiler stöds inte när %s är kompilerad utan GIO-Unix-funktioner."
+msgid ""
+"Launching desktop files is not supported when %s is compiled without GIO-"
+"Unix features."
+msgstr ""
+"Körning av skrivbordsfiler stöds inte när %s är kompilerad utan GIO-Unix-"
+"funktioner."
 
 #: ../exo-open/main.c:246
 #, c-format
 msgid "Failed to launch preferred application for category \"%s\"."
-msgstr "Misslyckades med att starta det föredragna programmet för kategorin \"%s\"."
+msgstr ""
+"Misslyckades med att starta det föredragna programmet för kategorin \"%s\"."
 
 #: ../exo-open/main.c:552
 #, c-format
@@ -1434,11 +1460,19 @@ msgstr "Surfa på webben"
 #~ msgid "You are not privileged to mount the volume \"%s\""
 #~ msgstr "Du har inte behörighet att montera volymen \"%s\""
 
-#~ msgid "Blank discs cannot be mounted, use a CD recording application like Xfburn to record audio or data on the disc"
-#~ msgstr "Tomma skivor kan inte monteras, använd ett cd-bränningsprogram som Xfburn för att skriva ljud eller data på skivan"
+#~ msgid ""
+#~ "Blank discs cannot be mounted, use a CD recording application like Xfburn "
+#~ "to record audio or data on the disc"
+#~ msgstr ""
+#~ "Tomma skivor kan inte monteras, använd ett cd-bränningsprogram som Xfburn "
+#~ "för att skriva ljud eller data på skivan"
 
-#~ msgid "Audio CDs cannot be mounted, use your favorite audio player to play the audio tracks"
-#~ msgstr "Ljud-cd-skivor kan inte monteras, använd din favoritljudspelare för att spela ljudspåren"
+#~ msgid ""
+#~ "Audio CDs cannot be mounted, use your favorite audio player to play the "
+#~ "audio tracks"
+#~ msgstr ""
+#~ "Ljud-cd-skivor kan inte monteras, använd din favoritljudspelare för att "
+#~ "spela ljudspåren"
 
 #~ msgid "You are not privileged to teardown the crypto layer"
 #~ msgstr "Du har inte behörighet att riva ner krypteringslagret"
@@ -1476,17 +1510,26 @@ msgstr "Surfa på webben"
 #~ msgid "Unknown error"
 #~ msgstr "Okänt fel"
 
-#~ msgid "%s is compiled without GIO-Unix features. Therefore it will probably not work on this system."
-#~ msgstr "%s är kompilerad utan GIO-Unix-funktioner. Därför kommer det antagligen inte att fungera på detta system."
+#~ msgid ""
+#~ "%s is compiled without GIO-Unix features. Therefore it will probably not "
+#~ "work on this system."
+#~ msgstr ""
+#~ "%s är kompilerad utan GIO-Unix-funktioner. Därför kommer det antagligen "
+#~ "inte att fungera på detta system."
 
 #~ msgid "Must specify HAL device UDI or device file"
 #~ msgstr "En HAL enhets-UDI eller enhetsfil måste anges"
 
-#~ msgid "Must not specify both a HAL device UDI and a device file simultaneously"
+#~ msgid ""
+#~ "Must not specify both a HAL device UDI and a device file simultaneously"
 #~ msgstr "Får inte ange både en HAL enhets-UDI och en enhetsfil på samma gång"
 
-#~ msgid "Cannot mount by HAL device UDI, because HAL support was disabled for this build"
-#~ msgstr "Kan inte montera efter HAL enhets-UDI, eftersom stöd för HAL blev inaktiverad för detta bygge"
+#~ msgid ""
+#~ "Cannot mount by HAL device UDI, because HAL support was disabled for this "
+#~ "build"
+#~ msgstr ""
+#~ "Kan inte montera efter HAL enhets-UDI, eftersom stöd för HAL blev "
+#~ "inaktiverad för detta bygge"
 
 #~ msgid "The specified UDI \"%s\" is not a valid HAL device UDI"
 #~ msgstr "Den angivna UDI:n \"%s\" är inte en giltig HAL enhets-UDI"
@@ -1518,14 +1561,22 @@ msgstr "Surfa på webben"
 #~ msgid "Unmounting device"
 #~ msgstr "Avmonterar enhet"
 
-#~ msgid "The device \"%s\" is being unmounted by the system. Please do not remove the media or disconnect the drive."
-#~ msgstr "Enheten \"%s\" håller på att avmonteras av systemet. Koppla inte från enheten eller ta ur lagringsmediet."
+#~ msgid ""
+#~ "The device \"%s\" is being unmounted by the system. Please do not remove "
+#~ "the media or disconnect the drive."
+#~ msgstr ""
+#~ "Enheten \"%s\" håller på att avmonteras av systemet. Koppla inte från "
+#~ "enheten eller ta ur lagringsmediet."
 
 #~ msgid "Writing data to device"
 #~ msgstr "Skriver data till enhet"
 
-#~ msgid "There is data that needs to be written to the device \"%s\" before it can be removed. Please do not remove the media or disconnect the drive."
-#~ msgstr "Det finns data som behöver skrivas till enheten \"%s\" innan den kan kopplas från. Koppla inte från enheten eller ta ur lagringsmediet."
+#~ msgid ""
+#~ "There is data that needs to be written to the device \"%s\" before it can "
+#~ "be removed. Please do not remove the media or disconnect the drive."
+#~ msgstr ""
+#~ "Det finns data som behöver skrivas till enheten \"%s\" innan den kan "
+#~ "kopplas från. Koppla inte från enheten eller ta ur lagringsmediet."
 
 #~ msgid "Unable to open \"%s\""
 #~ msgstr "Kunde inte öppna \"%s\""
@@ -1545,7 +1596,8 @@ msgstr "Surfa på webben"
 #~ msgid "Usage: exo-helper [OPTION...]"
 #~ msgstr "Användning: exo-helper [FLAGGA...]"
 
-#~ msgid "  -h, --help                          Print this help message and exit"
+#~ msgid ""
+#~ "  -h, --help                          Print this help message and exit"
 #~ msgstr "  -h, --help Skriv ut det här hjälpmeddelandet och avsluta"
 
 #~ msgid ""
