--- a/po/tr.po
+++ b/po/tr.po
@@ -1,8 +1,8 @@
 # Turkish translation of the exo package
 # Copyright (C) 2004-2007 os-cillation e.K.
 # This file is distributed under the same license as the libexo package.
-# 
-# 
+#
+#
 # Nimet Senem Özkızıklı <nimetsenem_gmail.com>, 2008.
 # Gökmen Görgen <gkmngrgn_gmail.com>, 2008.
 # Ayhan YALÇINSOY <ayhanyalcinsoy@gmail.com>, 2010.
@@ -10,14 +10,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-01-12 17:00+0000\n"
+"POT-Creation-Date: 2011-01-16 16:35+0100\n"
 "PO-Revision-Date: 2010-05-14 23:55+0300\n"
 "Last-Translator: Ayhan YALÇINSOY <ayhanyalcinsoy@gmail.com>\n"
 "Language-Team: Turkish <kde-i18n-doc@kde.org,xfce-i18n@xfce.org>\n"
+"Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: tr\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Poedit-Language: Turkish\n"
 "X-Poedit-Country: TURKEY\n"
@@ -69,8 +69,10 @@ msgstr "\"%s\" dosyası okunamadı: %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:890
 #, c-format
-msgid "Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
-msgstr "\"%s\" kalıbı yüklenemedi: Bilinmeyen neden, büyük olasılıkla bozuk dosya"
+msgid ""
+"Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
+msgstr ""
+"\"%s\" kalıbı yüklenemedi: Bilinmeyen neden, büyük olasılıkla bozuk dosya"
 
 #: ../exo/exo-gtk-extensions.c:227
 #, c-format
@@ -279,7 +281,9 @@ msgstr "Biçimleme dikeci"
 
 #: ../exo/exo-icon-view.c:748
 msgid "Model column used to retrieve the text if using Pango markup"
-msgstr "Pango biçimlemesi kullanılırken metni yeniden düzenlemek amacıyla kullanılan model dikeci"
+msgstr ""
+"Pango biçimlemesi kullanılırken metni yeniden düzenlemek amacıyla kullanılan "
+"model dikeci"
 
 #: ../exo/exo-icon-view.c:762
 msgid "Icon View Model"
@@ -290,8 +294,11 @@ msgid "The model for the icon view"
 msgstr "Simge görünümü için model"
 
 #: ../exo/exo-icon-view.c:777
-msgid "How the text and icon of each item are positioned relative to each other"
-msgstr "Her bir öğenin metin ve simgesinin birbiriyle ilişkili olarak nasıl konumlandırılacağı"
+msgid ""
+"How the text and icon of each item are positioned relative to each other"
+msgstr ""
+"Her bir öğenin metin ve simgesinin birbiriyle ilişkili olarak nasıl "
+"konumlandırılacağı"
 
 #: ../exo/exo-icon-view.c:809
 msgid "Reorderable"
@@ -338,8 +345,12 @@ msgid "Single Click Timeout"
 msgstr "Tek Tıklama Zaman Aşımı"
 
 #: ../exo/exo-icon-view.c:889 ../exo/exo-tree-view.c:172
-msgid "The amount of time after which the item under the mouse cursor will be selected automatically in single click mode"
-msgstr "Tek tıklama modundayken fare imlecinin altındaki öğenin otomatik olarak seçilmesinden sonraki geçen zaman"
+msgid ""
+"The amount of time after which the item under the mouse cursor will be "
+"selected automatically in single click mode"
+msgstr ""
+"Tek tıklama modundayken fare imlecinin altındaki öğenin otomatik olarak "
+"seçilmesinden sonraki geçen zaman"
 
 #: ../exo/exo-icon-view.c:904
 msgid "Spacing"
@@ -398,8 +409,12 @@ msgid "_Add a new toolbar"
 msgstr "Yeni bir _araç çubuğu ekle"
 
 #: ../exo/exo-toolbars-editor.c:221
-msgid "Drag an item onto the toolbars above to add it, from the toolbars in the items table to remove it."
-msgstr "Bir öğeyi eklemek için onu araç çubuklarının üzerine; kaldırmak içinse araç çubuklarından dışarıya sürükleyin."
+msgid ""
+"Drag an item onto the toolbars above to add it, from the toolbars in the "
+"items table to remove it."
+msgstr ""
+"Bir öğeyi eklemek için onu araç çubuklarının üzerine; kaldırmak içinse araç "
+"çubuklarından dışarıya sürükleyin."
 
 #: ../exo/exo-toolbars-editor.c:538
 msgid "Separator"
@@ -606,44 +621,37 @@ msgstr "Kabuk Betikleri"
 msgid "Create Launcher <b>%s</b>"
 msgstr "Başlatıcı Oluştur <b>%s</b>"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:297
 msgid "_Name:"
 msgstr "İs_im:"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:313
 msgid "C_omment:"
 msgstr "Y_orum:"
 
-#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:329
 msgid "Comm_and:"
 msgstr "Kom_ut:"
 
-#. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:344
 msgid "_URL:"
 msgstr "Bağl_antı:"
 
-#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:360
 msgid "Working _Directory:"
 msgstr "Çalışma dizini:"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:389
 msgid "_Icon:"
 msgstr "S_imge:"
 
-#. TRANSLATORS: Label for the icon button in "Create Launcher"/"Create Link"
-#. dialog if no icon selected
+#. TRANSLATORS: Label for the icon button in "Create Launcher"/"Create Link" dialog if no icon selected
 #. setup a label to tell that no icon was selected
 #: ../exo-desktop-item-edit/exo-die-editor.c:406
 #: ../exo-desktop-item-edit/exo-die-editor.c:1233
@@ -654,24 +662,26 @@ msgstr "Simge yok"
 msgid "Options:"
 msgstr "Seçenekler:"
 
-#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to
-#. avoid mnemonic conflicts
-#. *              and sync your translations with the translations in Thunar
-#. and xfce4-panel.
-#. 
+#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
+#. *              and sync your translations with the translations in Thunar and xfce4-panel.
+#.
 #: ../exo-desktop-item-edit/exo-die-editor.c:421
 msgid "Use _startup notification"
 msgstr "_Sistem açılış bildirimini kullan"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:422
-msgid "Select this option to enable startup notification when the command is run from the file manager or the menu. Not every application supports startup notification."
-msgstr "Komut, dosya yöneticisi veya menüden çalışırken sistem açılış bildirimini etkinleştirmek için bu seçeneği seçin; fakat her uygulama, sistem açılış bildirimini desteklememektedir."
+msgid ""
+"Select this option to enable startup notification when the command is run "
+"from the file manager or the menu. Not every application supports startup "
+"notification."
+msgstr ""
+"Komut, dosya yöneticisi veya menüden çalışırken sistem açılış bildirimini "
+"etkinleştirmek için bu seçeneği seçin; fakat her uygulama, sistem açılış "
+"bildirimini desteklememektedir."
 
-#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to
-#. avoid mnemonic conflicts
-#. *              and sync your translations with the translations in Thunar
-#. and xfce4-panel.
-#. 
+#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
+#. *              and sync your translations with the translations in Thunar and xfce4-panel.
+#.
 #: ../exo-desktop-item-edit/exo-die-editor.c:434
 msgid "Run in _terminal"
 msgstr "_Uçbirimde çalıştır"
@@ -822,8 +832,9 @@ msgstr "Tercih Edilen Uygulamalar"
 msgid "Select default applications for various services"
 msgstr "Çeşitli servisler için öntanımlı uygulamaları seçin"
 
+#.
 #. Internet
-#. 
+#.
 #: ../exo-helper/exo-helper-chooser-dialog.c:132
 msgid "Internet"
 msgstr "İnternet"
@@ -854,8 +865,9 @@ msgstr ""
 "Tercih edilen eposta okuyucusu, eposta adreslerine\n"
 "tıkladığınızda, eposta oluşturmada kullanılacak."
 
+#.
 #. Utilities
-#. 
+#.
 #: ../exo-helper/exo-helper-chooser-dialog.c:205
 msgid "Utilities"
 msgstr "Yardımcı Araçlar"
@@ -1032,7 +1044,9 @@ msgstr "%s, yazılacak şekilde açılamadı"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
-msgstr "Tercih Edilen Uygulamalar (İnternet Tarayıcısı, Eposta Okuyucusu ve Uçbirim Öykünücüsü)"
+msgstr ""
+"Tercih Edilen Uygulamalar (İnternet Tarayıcısı, Eposta Okuyucusu ve Uçbirim "
+"Öykünücüsü)"
 
 #: ../exo-helper/main.c:41
 msgid "Failed to execute default Web Browser"
@@ -1067,8 +1081,12 @@ msgid "SOCKET ID"
 msgstr "YUVA ID'si"
 
 #: ../exo-helper/main.c:70
-msgid "Launch the default helper of TYPE with the optional PARAMETER, where TYPE is one of the following values."
-msgstr "Aşağıdaki TİPlerden birinin öntanımlı yardımcısını, seçenekli PARAMETRE'lerle başlat."
+msgid ""
+"Launch the default helper of TYPE with the optional PARAMETER, where TYPE is "
+"one of the following values."
+msgstr ""
+"Aşağıdaki TİPlerden birinin öntanımlı yardımcısını, seçenekli "
+"PARAMETRE'lerle başlat."
 
 #: ../exo-helper/main.c:70
 msgid "TYPE [PARAMETER]"
@@ -1273,13 +1291,15 @@ msgid "  -?, --help                          Print this help message and exit"
 msgstr "  -?, --help                          Bu mesajı yazdır ve çık"
 
 #: ../exo-open/main.c:101
-msgid "  -V, --version                       Print version information and exit"
+msgid ""
+"  -V, --version                       Print version information and exit"
 msgstr "  -V, --version                       Sürüm bilgisini yazdır ve çık"
 
 #: ../exo-open/main.c:103
 msgid ""
 "  --launch TYPE [PARAMETERs...]       Launch the preferred application of\n"
-"                                      TYPE with the optional PARAMETERs, where\n"
+"                                      TYPE with the optional PARAMETERs, "
+"where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
 "  --launch TÜR [PARAMETREler...]      TÜR'e karşılık gelen uygulamayı,\n"
@@ -1287,20 +1307,21 @@ msgstr ""
 
 #: ../exo-open/main.c:107
 msgid ""
-"  --working-directory DIRECTORY       Default working directory for applications\n"
+"  --working-directory DIRECTORY       Default working directory for "
+"applications\n"
 "                                      when using the --launch option."
 msgstr ""
-"  --working-directory DIRECTORY       --launch seçeneğinin kullanıldığı, uygulamaların\n"
+"  --working-directory DIRECTORY       --launch seçeneğinin kullanıldığı, "
+"uygulamaların\n"
 "                                        öntanımlı çalışma dizini."
 
 #: ../exo-open/main.c:110
 msgid "The following TYPEs are supported for the --launch command:"
 msgstr "--launch komutu tarafından desteklenen TÜR'ler:"
 
-#. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader,
-#. TerminalEmulator),
+#. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader, TerminalEmulator),
 #. * since the exo-helper utility will not accept localized TYPEs.
-#. 
+#.
 #: ../exo-open/main.c:116
 msgid ""
 "  WebBrowser       - The preferred Web Browser.\n"
@@ -1324,13 +1345,18 @@ msgstr ""
 "Eğer --launch seçeneğini belirlemezseniz, exo-open tüm belirtilmiş bağlantı\n"
 "adreslerini, kendi tercih ettiği bağlantı işleyicileri ile açacak. Ama bu\n"
 "seçeneği belirtirseniz, hangi uygulamayla beraber açmak istediğinizi ve\n"
-"istediğiniz uygulamayla ilgili parametreleri de seçebilirsiniz (örneğin Uçbirim\n"
+"istediğiniz uygulamayla ilgili parametreleri de seçebilirsiniz (örneğin "
+"Uçbirim\n"
 "Öykünücüsü için, uçbirimde çalıştırılmış biçimde komut satırını geçmek gibi)."
 
 #: ../exo-open/main.c:183
 #, c-format
-msgid "Launching desktop files is not supported when %s is compiled without GIO-Unix features."
-msgstr "%s GIO-Unix özellikleri olmadan derlendiğinde Masaüstü dosyası başlatma desteklenmiyor."
+msgid ""
+"Launching desktop files is not supported when %s is compiled without GIO-"
+"Unix features."
+msgstr ""
+"%s GIO-Unix özellikleri olmadan derlendiğinde Masaüstü dosyası başlatma "
+"desteklenmiyor."
 
 #: ../exo-open/main.c:246
 #, c-format
@@ -1435,11 +1461,19 @@ msgstr "Web'de gezin"
 #~ msgid "You are not privileged to mount the volume \"%s\""
 #~ msgstr "\"%s\" sürücüsünü ayarlamak için gerekli izniniz yok"
 
-#~ msgid "Blank discs cannot be mounted, use a CD recording application like Xfburn to record audio or data on the disc"
-#~ msgstr "Boş diskler bağlanamadı, diske bir veri veya ses kaydetmek için Xfburn gibi bir CD yazdırma uygulaması kullanın"
+#~ msgid ""
+#~ "Blank discs cannot be mounted, use a CD recording application like Xfburn "
+#~ "to record audio or data on the disc"
+#~ msgstr ""
+#~ "Boş diskler bağlanamadı, diske bir veri veya ses kaydetmek için Xfburn "
+#~ "gibi bir CD yazdırma uygulaması kullanın"
 
-#~ msgid "Audio CDs cannot be mounted, use your favorite audio player to play the audio tracks"
-#~ msgstr "Ses CD'si bağlanılamadı, sesleri oynatmak için gözde ses oynatıcınızı kullanın"
+#~ msgid ""
+#~ "Audio CDs cannot be mounted, use your favorite audio player to play the "
+#~ "audio tracks"
+#~ msgstr ""
+#~ "Ses CD'si bağlanılamadı, sesleri oynatmak için gözde ses oynatıcınızı "
+#~ "kullanın"
 
 #~ msgid "You are not privileged to teardown the crypto layer"
 #~ msgstr "Gizli katmanın bağlantısını kesmek için yeterli izniniz yok"
@@ -1451,7 +1485,8 @@ msgstr "Web'de gezin"
 #~ msgstr "\"%s\" sürücüsünün bağlantısını kesmek için izniniz yok"
 
 #~ msgid "An application is preventing the volume \"%s\" from being unmounted"
-#~ msgstr "Bir uygulama, \"%s\" sürücüsünün bağlantısının kesilmesini engelliyor"
+#~ msgstr ""
+#~ "Bir uygulama, \"%s\" sürücüsünün bağlantısının kesilmesini engelliyor"
 
 #~ msgid "The volume \"%s\" was probably mounted manually on the command line"
 #~ msgstr "\"%s\" sürücüsü, büyük olasılıkla komut satırı üzerinden bağlandı"
@@ -1477,17 +1512,28 @@ msgstr "Web'de gezin"
 #~ msgid "Unknown error"
 #~ msgstr "Bilinmeyen hata"
 
-#~ msgid "%s is compiled without GIO-Unix features. Therefore it will probably not work on this system."
-#~ msgstr "%s GIO-Unix özellikleri olmadan derlendi. Muhtemelen bu sistemde çalışmayacak."
+#~ msgid ""
+#~ "%s is compiled without GIO-Unix features. Therefore it will probably not "
+#~ "work on this system."
+#~ msgstr ""
+#~ "%s GIO-Unix özellikleri olmadan derlendi. Muhtemelen bu sistemde "
+#~ "çalışmayacak."
 
 #~ msgid "Must specify HAL device UDI or device file"
 #~ msgstr "HAL sürücüsü UDI ya da sürücüsü dosyası belirtilmeli"
 
-#~ msgid "Must not specify both a HAL device UDI and a device file simultaneously"
-#~ msgstr "Eşzamanlı olarak hem bir HAL sürücüsü UDI hem de sürücü dosyası belirtilmeli "
+#~ msgid ""
+#~ "Must not specify both a HAL device UDI and a device file simultaneously"
+#~ msgstr ""
+#~ "Eşzamanlı olarak hem bir HAL sürücüsü UDI hem de sürücü dosyası "
+#~ "belirtilmeli "
 
-#~ msgid "Cannot mount by HAL device UDI, because HAL support was disabled for this build"
-#~ msgstr "HAL sürücüsü UDI bağlanılamıyor, çünkü bu yapı için HAL desteği etkinleştirilmemiş"
+#~ msgid ""
+#~ "Cannot mount by HAL device UDI, because HAL support was disabled for this "
+#~ "build"
+#~ msgstr ""
+#~ "HAL sürücüsü UDI bağlanılamıyor, çünkü bu yapı için HAL desteği "
+#~ "etkinleştirilmemiş"
 
 #~ msgid "The specified UDI \"%s\" is not a valid HAL device UDI"
 #~ msgstr "Belirtilen UDI (\"%s\")  geçerli bir HAL sürücüsü UDI değil"
@@ -1519,14 +1565,22 @@ msgstr "Web'de gezin"
 #~ msgid "Unmounting device"
 #~ msgstr "Sürücü bağlanılamıyor"
 
-#~ msgid "The device \"%s\" is being unmounted by the system. Please do not remove the media or disconnect the drive."
-#~ msgstr "\"%s\" sürücüsü sistem tarafından bağlanılamadı. Lütfen ortamı kaldırmayın ya da sürücüyle bağlantıyı kesmeyin."
+#~ msgid ""
+#~ "The device \"%s\" is being unmounted by the system. Please do not remove "
+#~ "the media or disconnect the drive."
+#~ msgstr ""
+#~ "\"%s\" sürücüsü sistem tarafından bağlanılamadı. Lütfen ortamı "
+#~ "kaldırmayın ya da sürücüyle bağlantıyı kesmeyin."
 
 #~ msgid "Writing data to device"
 #~ msgstr "Veriler sürücüye yazılıyor"
 
-#~ msgid "There is data that needs to be written to the device \"%s\" before it can be removed. Please do not remove the media or disconnect the drive."
-#~ msgstr "Kaldırılmadan önce \"%s\" sürücüsüne yazılması gereken veri var. Lütfen ortamı kaldırmayın ve sürücüyle bağlantıyı kesmeyin."
+#~ msgid ""
+#~ "There is data that needs to be written to the device \"%s\" before it can "
+#~ "be removed. Please do not remove the media or disconnect the drive."
+#~ msgstr ""
+#~ "Kaldırılmadan önce \"%s\" sürücüsüne yazılması gereken veri var. Lütfen "
+#~ "ortamı kaldırmayın ve sürücüyle bağlantıyı kesmeyin."
 
 #~ msgid "Unable to open \"%s\""
 #~ msgstr "Açmak için uygun değil: \"%s\""
