--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -3,19 +3,19 @@
 # This file is distributed under the same license as the exo package.
 # Hydonsingore Cia <hydonsingore@educities.edu.tw>
 # Cheng-Chia Tseng <pswo10680@gmail.com>
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-11-05 11:00+0000\n"
+"POT-Creation-Date: 2011-01-16 16:35+0100\n"
 "PO-Revision-Date: 2010-09-10 12:53+0800\n"
 "Last-Translator: Cheng-Chia Tseng <pswo10680@gmail.com>\n"
 "Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
+"Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: zh_TW\n"
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:131
 #: ../exo/exo-cell-renderer-icon.c:144
@@ -63,7 +63,8 @@ msgstr "無法讀取檔案「%s」：%s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:890
 #, c-format
-msgid "Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
+msgid ""
+"Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
 msgstr "無法載入影像「%s」：原因未知，可能肇因於影像檔案毀損。"
 
 #: ../exo/exo-gtk-extensions.c:227
@@ -284,7 +285,8 @@ msgid "The model for the icon view"
 msgstr "圖示檢視的模型"
 
 #: ../exo/exo-icon-view.c:777
-msgid "How the text and icon of each item are positioned relative to each other"
+msgid ""
+"How the text and icon of each item are positioned relative to each other"
 msgstr "該如何配置每個項目文字與圖示間的相對位置"
 
 #: ../exo/exo-icon-view.c:809
@@ -332,8 +334,11 @@ msgid "Single Click Timeout"
 msgstr "單一點擊逾時期"
 
 #: ../exo/exo-icon-view.c:889 ../exo/exo-tree-view.c:172
-msgid "The amount of time after which the item under the mouse cursor will be selected automatically in single click mode"
-msgstr "在單一點擊模式下，當滑鼠游標指向某個物件超過此量的時間後將會自動選取該項目"
+msgid ""
+"The amount of time after which the item under the mouse cursor will be "
+"selected automatically in single click mode"
+msgstr ""
+"在單一點擊模式下，當滑鼠游標指向某個物件超過此量的時間後將會自動選取該項目"
 
 #: ../exo/exo-icon-view.c:904
 msgid "Spacing"
@@ -392,8 +397,12 @@ msgid "_Add a new toolbar"
 msgstr "新增一工具列(_A)"
 
 #: ../exo/exo-toolbars-editor.c:221
-msgid "Drag an item onto the toolbars above to add it, from the toolbars in the items table to remove it."
-msgstr "將某個項目拖曳至工具列上以加入它，或是某項目從工具列的項目表內拖曳出來以移除它。"
+msgid ""
+"Drag an item onto the toolbars above to add it, from the toolbars in the "
+"items table to remove it."
+msgstr ""
+"將某個項目拖曳至工具列上以加入它，或是某項目從工具列的項目表內拖曳出來以移除"
+"它。"
 
 #: ../exo/exo-toolbars-editor.c:538
 msgid "Separator"
@@ -522,7 +531,7 @@ msgid "  --strip-content   Remove node contents from XML files\n"
 msgstr "  --strip-content   從 XML 檔案移除 node 內容\n"
 
 #: ../exo-csource/main.c:304 ../exo-desktop-item-edit/main.c:177
-#: ../exo-open/main.c:258
+#: ../exo-open/main.c:471
 #, c-format
 msgid ""
 "Copyright (c) %s\n"
@@ -538,7 +547,7 @@ msgstr ""
 "\n"
 
 #: ../exo-csource/main.c:308 ../exo-desktop-item-edit/main.c:181
-#: ../exo-open/main.c:262
+#: ../exo-open/main.c:475
 #, c-format
 msgid ""
 "%s comes with ABSOLUTELY NO WARRANTY,\n"
@@ -554,7 +563,7 @@ msgstr ""
 "\n"
 
 #: ../exo-csource/main.c:312 ../exo-desktop-item-edit/main.c:185
-#: ../exo-open/main.c:266
+#: ../exo-open/main.c:479
 #, c-format
 msgid "Please report bugs to <%s>.\n"
 msgstr "若遭遇錯誤，請回報至 <%s>>\n"
@@ -599,44 +608,37 @@ msgstr "Shell 指令稿"
 msgid "Create Launcher <b>%s</b>"
 msgstr "建立啟動器 <b>%s</b>"
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:297
 msgid "_Name:"
 msgstr "名稱(_N)："
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:313
 msgid "C_omment:"
 msgstr "註解(_O)："
 
-#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:329
 msgid "Comm_and:"
 msgstr "指令(_A)："
 
-#. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:344
 msgid "_URL:"
 msgstr "_URL："
 
-#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic
-#. conflicts
+#. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:360
 msgid "Working _Directory:"
 msgstr "工作目錄(_D)："
 
-#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to
-#. avoid mnemonic conflicts
+#. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:389
 msgid "_Icon:"
 msgstr "圖示(_I)："
 
-#. TRANSLATORS: Label for the icon button in "Create Launcher"/"Create Link"
-#. dialog if no icon selected
+#. TRANSLATORS: Label for the icon button in "Create Launcher"/"Create Link" dialog if no icon selected
 #. setup a label to tell that no icon was selected
 #: ../exo-desktop-item-edit/exo-die-editor.c:406
 #: ../exo-desktop-item-edit/exo-die-editor.c:1233
@@ -647,24 +649,25 @@ msgstr "無圖示"
 msgid "Options:"
 msgstr "選項："
 
-#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to
-#. avoid mnemonic conflicts
-#. *              and sync your translations with the translations in Thunar
-#. and xfce4-panel.
-#. 
+#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
+#. *              and sync your translations with the translations in Thunar and xfce4-panel.
+#.
 #: ../exo-desktop-item-edit/exo-die-editor.c:421
 msgid "Use _startup notification"
 msgstr "使用起始通知(_S)"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:422
-msgid "Select this option to enable startup notification when the command is run from the file manager or the menu. Not every application supports startup notification."
-msgstr "選取此選項以啟用當指令從檔案管理員或是選單執行時顯示起始通知的功能。不是所有的應用程式都支援起始通知。"
+msgid ""
+"Select this option to enable startup notification when the command is run "
+"from the file manager or the menu. Not every application supports startup "
+"notification."
+msgstr ""
+"選取此選項以啟用當指令從檔案管理員或是選單執行時顯示起始通知的功能。不是所有"
+"的應用程式都支援起始通知。"
 
-#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to
-#. avoid mnemonic conflicts
-#. *              and sync your translations with the translations in Thunar
-#. and xfce4-panel.
-#. 
+#. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
+#. *              and sync your translations with the translations in Thunar and xfce4-panel.
+#.
 #: ../exo-desktop-item-edit/exo-die-editor.c:434
 msgid "Run in _terminal"
 msgstr "在終端機中執行(_T)"
@@ -815,8 +818,9 @@ msgstr "偏好的應用程式"
 msgid "Select default applications for various services"
 msgstr "為各種服務選擇預設的應用程式"
 
+#.
 #. Internet
-#. 
+#.
 #: ../exo-helper/exo-helper-chooser-dialog.c:132
 msgid "Internet"
 msgstr "網際網路"
@@ -847,8 +851,9 @@ msgstr ""
 "所偏好的郵件讀取程式將在您點擊電子郵件地址時\n"
 "用來撰寫電子郵件。"
 
+#.
 #. Utilities
-#. 
+#.
 #: ../exo-helper/exo-helper-chooser-dialog.c:205
 msgid "Utilities"
 msgstr "公用程式"
@@ -1018,7 +1023,7 @@ msgstr ""
 msgid "No command specified"
 msgstr "尚未指定指令"
 
-#: ../exo-helper/exo-helper.c:684
+#: ../exo-helper/exo-helper.c:688 ../exo-helper/exo-helper.c:722
 #, c-format
 msgid "Failed to open %s for writing"
 msgstr "無法開啟要寫入的 %s"
@@ -1060,8 +1065,11 @@ msgid "SOCKET ID"
 msgstr "SOCKET ID"
 
 #: ../exo-helper/main.c:70
-msgid "Launch the default helper of TYPE with the optional PARAMETER, where TYPE is one of the following values."
-msgstr "啟動「類型」的預設輔助程式，並加上選用的「參數」；「類型」是下方的值之一。"
+msgid ""
+"Launch the default helper of TYPE with the optional PARAMETER, where TYPE is "
+"one of the following values."
+msgstr ""
+"啟動「類型」的預設輔助程式，並加上選用的「參數」；「類型」是下方的值之一。"
 
 #: ../exo-helper/main.c:70
 msgid "TYPE [PARAMETER]"
@@ -1254,49 +1262,51 @@ msgstr "W3M 文字瀏覽器"
 msgid "X Terminal"
 msgstr "X 終端機"
 
-#: ../exo-open/main.c:84
+#: ../exo-open/main.c:97
 msgid "Usage: exo-open [URLs...]"
 msgstr "用法：exo-open [URLs...]"
 
-#: ../exo-open/main.c:85
+#: ../exo-open/main.c:98
 msgid "       exo-open --launch TYPE [PARAMETERs...]"
 msgstr "       exo-open --launch 類型 [參數...]"
 
-#: ../exo-open/main.c:87
+#: ../exo-open/main.c:100
 msgid "  -?, --help                          Print this help message and exit"
 msgstr "  -?, --help                          印出此幫助訊息並離開"
 
-#: ../exo-open/main.c:88
-msgid "  -V, --version                       Print version information and exit"
+#: ../exo-open/main.c:101
+msgid ""
+"  -V, --version                       Print version information and exit"
 msgstr "  -V, --version                       印出版本訊息並離開"
 
-#: ../exo-open/main.c:90
+#: ../exo-open/main.c:103
 msgid ""
 "  --launch TYPE [PARAMETERs...]       Launch the preferred application of\n"
-"                                      TYPE with the optional PARAMETERs, where\n"
+"                                      TYPE with the optional PARAMETERs, "
+"where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
 "  --launch 類型 [參數...]       啟動某「類型」的偏好應用程式，並加\n"
 "                                      上選用的「參數」；「類型」是下方的\n"
 "                                      值之一。"
 
-#: ../exo-open/main.c:94
+#: ../exo-open/main.c:107
 msgid ""
-"  --working-directory DIRECTORY       Default working directory for applications\n"
+"  --working-directory DIRECTORY       Default working directory for "
+"applications\n"
 "                                      when using the --launch option."
 msgstr ""
 "  --working-directory 目錄       使用 --launch 選項時應用程式的\n"
 "                                      預設工作目錄。"
 
-#: ../exo-open/main.c:97
+#: ../exo-open/main.c:110
 msgid "The following TYPEs are supported for the --launch command:"
 msgstr "--launch 指令支援下列「類型」："
 
-#. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader,
-#. TerminalEmulator),
+#. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader, TerminalEmulator),
 #. * since the exo-helper utility will not accept localized TYPEs.
-#. 
-#: ../exo-open/main.c:103
+#.
+#: ../exo-open/main.c:116
 msgid ""
 "  WebBrowser       - The preferred Web Browser.\n"
 "  MailReader       - The preferred Mail Reader.\n"
@@ -1308,7 +1318,7 @@ msgstr ""
 "  FileManager      - 偏好的檔案管理員。\n"
 "  TerminalEmulator - 偏好的終端機模擬器。"
 
-#: ../exo-open/main.c:108
+#: ../exo-open/main.c:121
 msgid ""
 "If you don't specify the --launch option, exo-open will open all specified\n"
 "URLs with their preferred URL handlers. Else, if you specify the --launch\n"
@@ -1321,22 +1331,24 @@ msgstr ""
 "偏好的應用程式，並且將額外的參數傳遞給該應用程式 (例：對於終端機模擬器\n"
 "而言，您可以傳遞應該在終端機內執行的指令列)。"
 
-#: ../exo-open/main.c:170
+#: ../exo-open/main.c:183
 #, c-format
-msgid "Launching desktop files is not supported when %s is compiled without GIO-Unix features."
+msgid ""
+"Launching desktop files is not supported when %s is compiled without GIO-"
+"Unix features."
 msgstr "當 %s 編譯時沒有加入 GIO-Unix V選項時，啟動桌面檔案功能將不受支援。"
 
-#: ../exo-open/main.c:312
+#: ../exo-open/main.c:246
 #, c-format
 msgid "Failed to launch preferred application for category \"%s\"."
 msgstr "為分類「%s」啟動偏好應用程式失敗。"
 
-#: ../exo-open/main.c:354
+#: ../exo-open/main.c:552
 #, c-format
 msgid "Unable to detect the URI-scheme of \"%s\"."
 msgstr "無法偵測「%s」的 URI-scheme。"
 
-#: ../exo-open/main.c:364
+#: ../exo-open/main.c:564
 #, c-format
 msgid "Failed to open URI \"%s\"."
 msgstr "無法開啟 URI 「%s」。"
